--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-8 [TikTok母公司字节跳动计划投入21亿美元在马来西亚投资人工智能](/articles/voa/1015015.md)
+
 6-8 [普京:没有必要对乌克兰进行核打击](/articles/voa/1015016.md)
 
 6-8 [美国智库报告 越南正加快南中国海的填海造岛步伐](/articles/voa/1015017.md)
@@ -598,6 +600,4 @@
 5-28 [中国否认将对所有入境者检查手机](/articles/voa/1015313.md)
 
 5-28 [联合国安理会将召开紧急会议 讨论以色列对拉法的致命袭击](/articles/voa/1015314.md)
-
-5-28 [印太海上局势紧张，美中举行视频磋商](/articles/voa/1015315.md)
 
