--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-8 [前银行家罗奇坚称香港“玩完了”](/articles/voa/1015011.md)
+
 6-8 [乌克兰和摩尔多瓦准备启动加入欧盟的正式谈判](/articles/voa/1015012.md)
 
 6-8 [拜登对法国进行国事访问 将与马克龙讨论乌克兰和以色列等议题](/articles/voa/1015013.md)
@@ -598,6 +600,4 @@
 5-28 [台湾国会改革法案三读通过，公民响应“青鸟行动”抗议修法](/articles/voa/1015309.md)
 
 5-28 [国事光析：再谈中国社会溃败的“面积”](/articles/voa/1015310.md)
-
-5-28 [涉偷技术转职华为，韩国起诉前SK海力士中国员工](/articles/voa/1015311.md)
 
