--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-8 [专访林培瑞：六四35周年，西方离看穿中共还有相当距离](/articles/voa/1015008.md)
+
 6-8 [土耳其宣布对进口中国汽车加征40%关税](/articles/voa/1015009.md)
 
 6-8 [脱钩之势推动下，美中资本正远离对方市场](/articles/voa/1015010.md)
@@ -598,6 +600,4 @@
 5-28 [史无前例 台湾正发生针对立法院在野党的抗争](/articles/voa/1015306.md)
 
 5-28 [23条刚通过港警就抓捕六人，港府和北京最害怕的就是一个“特别日子”](/articles/voa/1015307.md)
-
-5-28 [赖清德再次视察陆海空军部队，感谢军方辛苦因应中国围台军演](/articles/voa/1015308.md)
 
