--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-8 [【CDTV】靠浪兄弟｜打工人都背的包是压缩包](/articles/cdt/339830.md)
+
 6-8 [【404文库】小萝卜丝｜网传某省立医院内，一座18层的楼，有7层都是干部病房](/articles/cdt/339833.md)
 
 6-8 [每日一语 2024.6.7](/articles/cdt/339837.md)
@@ -598,6 +600,4 @@
 5-7 [【404文库】“需要关注和投身于公共生活，体察他人的痛苦，想办法改良社会，而不仅仅是专注‘内在觉醒’”（外二篇）](/articles/cdt/341016.md)
 
 5-5 [每日一语 2024.5.4](/articles/cdt/341021.md)
-
-5-5 [【404文库】侠骨柔情的铁哥｜千年大计之空城计——雄安设立7年后的现况](/articles/cdt/341030.md)
 
