--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-9 [欧盟官员访华举行人权对话，罕见获准实地考察西藏](/articles/voa/1015006.md)
+
 6-8 [以军成功救出四名人质，甘茨推迟发布辞职声明](/articles/voa/1015007.md)
 
 6-8 [专访林培瑞：六四35周年，西方离看穿中共还有相当距离](/articles/voa/1015008.md)
@@ -598,6 +600,4 @@
 5-28 [比利时向乌克兰提供十亿美元军援，包括30架F-16战机](/articles/voa/1015304.md)
 
 5-28 [中国电商巨头希音纽约上市受挫转向伦敦，英国议员要求对其严格审查](/articles/voa/1015305.md)
-
-5-28 [史无前例 台湾正发生针对立法院在野党的抗争](/articles/voa/1015306.md)
 
