--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-9 [荷兰军舰穿越台湾海峡后中共派战机绕其舰 荷国防部：造成潜在的不安全](/articles/voa/1014996.md)
+
 6-9 [朝鲜再投放数百个“垃圾气球” 韩国重启对朝大声公反制](/articles/voa/1014997.md)
 
 6-9 [欧洲议会选举进入最后一天 选后料将更右倾](/articles/voa/1014998.md)
@@ -598,6 +600,4 @@
 5-29 [佛罗里达大学雇员和学生涉嫌非法密谋向中国运送毒品、毒素](/articles/voa/1015294.md)
 
 5-29 [面对台湾立法院外的抗议，北京放大立委们的言辞和肢体冲突](/articles/voa/1015295.md)
-
-5-29 [格鲁吉亚议会推翻总统对有争议的外国代理人法律的否决](/articles/voa/1015296.md)
 
