--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-9 [印度总理莫迪将与联盟盟友一起宣誓就职](/articles/voa/1014994.md)
+
 6-9 [中国和巴基斯坦同意加强矿业与能源合作 联合声明强调政治互信牢不可破](/articles/voa/1014995.md)
 
 6-9 [荷兰军舰穿越台湾海峡后中共派战机绕其舰 荷国防部：造成潜在的不安全](/articles/voa/1014996.md)
@@ -598,6 +600,4 @@
 5-29 [美国敦促以色列全面调查拉法难民营的致命袭击](/articles/voa/1015292.md)
 
 5-29 [中国以“数额特别巨大”的贿赂罪判处前华融高管死刑](/articles/voa/1015293.md)
-
-5-29 [佛罗里达大学雇员和学生涉嫌非法密谋向中国运送毒品、毒素](/articles/voa/1015294.md)
 
