--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-9 [中国指责美国将南中国海地区拉入“军备竞赛漩涡”](/articles/dw/1025288.md)
+
 6-9 [旅德台湾人谈台湾“废死之辩”](/articles/dw/1025289.md)
 
 6-9 [欧洲议会是做什么的?](/articles/dw/1025290.md)
@@ -598,6 +600,4 @@
 5-13 [专访：“跨境镇压 ”下的中国留学生](/articles/dw/1025586.md)
 
 5-13 [大赦国际：中国“跨境镇压”海外留学生](/articles/dw/1025587.md)
-
-5-12 [恐违反国际法 以色列遭美国批评](/articles/dw/1025588.md)
 
