--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-9 [白宫拒绝说明拜登下月是否会在华盛顿会晤内塔尼亚胡](/articles/voa/1014989.md)
+
 6-9 [瑞典担忧由中国控制瑞典风电的风险](/articles/voa/1014990.md)
 
 6-9 [乌克兰称首次击毁俄罗斯一架苏-57第五代隐形战机](/articles/voa/1014991.md)
@@ -598,6 +600,4 @@
 5-29 [台湾称中共军演主要目的是宣传恫吓，不是要启战](/articles/voa/1015287.md)
 
 5-29 [特朗普封口费案进入戏剧性最后阶段 陪审团将开始审议](/articles/voa/1015288.md)
-
-5-29 [美国反驳中国对联合国第2758号决议的描述](/articles/voa/1015289.md)
 
