--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-10 [反送中运动五周年纪念 香港人慨叹东方之珠变得陌生](/articles/voa/1014988.md)
+
 6-9 [白宫拒绝说明拜登下月是否会在华盛顿会晤内塔尼亚胡](/articles/voa/1014989.md)
 
 6-9 [瑞典担忧由中国控制瑞典风电的风险](/articles/voa/1014990.md)
@@ -598,6 +600,4 @@
 5-29 [IMF上调中国经济增速预测至5%，但警告产业政策可能损害贸易](/articles/voa/1015286.md)
 
 5-29 [台湾称中共军演主要目的是宣传恫吓，不是要启战](/articles/voa/1015287.md)
-
-5-29 [特朗普封口费案进入戏剧性最后阶段 陪审团将开始审议](/articles/voa/1015288.md)
 
