--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-10 [反送中五周年台港社运人士在台北游行纪念，高唱《愿荣光归香港》](/articles/voa/1014986.md)
+
+6-10 [路透：七国集团峰会将对协助俄罗斯的中国小银行发出新警告](/articles/voa/1014987.md)
+
 6-10 [反送中运动五周年纪念 香港人慨叹东方之珠变得陌生](/articles/voa/1014988.md)
 
 6-9 [白宫拒绝说明拜登下月是否会在华盛顿会晤内塔尼亚胡](/articles/voa/1014989.md)
@@ -596,8 +600,4 @@
 5-29 [泰国前总理他信面临冒犯君主罪的审判](/articles/voa/1015284.md)
 
 5-29 [国际特赦组织：全球被执行死刑人数飙升至近十年最高纪录](/articles/voa/1015285.md)
-
-5-29 [IMF上调中国经济增速预测至5%，但警告产业政策可能损害贸易](/articles/voa/1015286.md)
-
-5-29 [台湾称中共军演主要目的是宣传恫吓，不是要启战](/articles/voa/1015287.md)
 
