--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-10 [中非共和国政府停止一家中国矿业公司运营，指责其与武装组织有关系](/articles/voa/1014983.md)
+
 6-10 [以色列在人质解救行动中打死274名巴勒斯坦人后继续轰击加沙](/articles/voa/1014984.md)
 
 6-10 [伦敦举行“反送中”五周年纪念活动：呼吁制裁港官、关闭经贸办](/articles/voa/1014985.md)
@@ -598,6 +600,4 @@
 5-29 [美前军事情报官员：中共借环台军演同时测试台美底线，美应以实力应对](/articles/voa/1015281.md)
 
 5-29 [习近平在台湾立法院占据桥头堡了吗?](/articles/voa/1015282.md)
-
-5-29 [中共高级官员访日 会晤日本首相与外长](/articles/voa/1015283.md)
 
