--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-10 [美中人工智能竞争打到中东 海湾国家两边通吃？](/articles/voa/1014981.md)
+
+6-10 [沃尔沃将电动汽车生产转移到比利时以避免中国关税](/articles/voa/1014982.md)
+
 6-10 [中非共和国政府停止一家中国矿业公司运营，指责其与武装组织有关系](/articles/voa/1014983.md)
 
 6-10 [以色列在人质解救行动中打死274名巴勒斯坦人后继续轰击加沙](/articles/voa/1014984.md)
@@ -596,8 +600,4 @@
 5-29 [台湾新政府就任不久后，美国任命台湾的“坚定”朋友谷立言接任美在台协会台北办事处处长](/articles/voa/1015279.md)
 
 5-29 [世界媒体看中国：再次大举投资半导体产业](/articles/voa/1015280.md)
-
-5-29 [美前军事情报官员：中共借环台军演同时测试台美底线，美应以实力应对](/articles/voa/1015281.md)
-
-5-29 [习近平在台湾立法院占据桥头堡了吗?](/articles/voa/1015282.md)
 
