--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-10 [欧洲议会选举的极右翼斩获让法国马克龙和德国朔尔茨失利](/articles/voa/1014979.md)
+
+6-10 [白宫：乌克兰打击俄罗斯目标后，俄罗斯在哈尔科夫的推进陷入停滞](/articles/voa/1014980.md)
+
 6-10 [美中人工智能竞争打到中东 海湾国家两边通吃？](/articles/voa/1014981.md)
 
 6-10 [沃尔沃将电动汽车生产转移到比利时以避免中国关税](/articles/voa/1014982.md)
@@ -596,8 +600,4 @@
 5-29 [香港泛民主派初选案宣判在即，判决将对香港未来产生重大影响](/articles/voa/1015277.md)
 
 5-29 [菲律宾总统马科斯：中国海警新规加剧紧张局势，“令人担忧”](/articles/voa/1015278.md)
-
-5-29 [台湾新政府就任不久后，美国任命台湾的“坚定”朋友谷立言接任美在台协会台北办事处处长](/articles/voa/1015279.md)
-
-5-29 [世界媒体看中国：再次大举投资半导体产业](/articles/voa/1015280.md)
 
