--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-10 [连清川｜新媒体就是人类思想史上的一段弯路](/articles/cdt/339794.md)
+
+6-10 [每日一语 2024.6.9](/articles/cdt/339796.md)
+
+6-10 [WOMEN我们｜吴仁华：广场史学家的寻岸之旅](/articles/cdt/339797.md)
+
 6-9 [WOMEN我们｜台湾六四晚会：在失落、感恩、坚守和重塑中纪念](/articles/cdt/339815.md)
 
 6-9 [三联生活周刊｜女子两年被家暴16次，想要离婚为何这么难？](/articles/cdt/339818.md)
@@ -594,10 +600,4 @@
 5-6 [马与人说｜谁来祭奠梅大高速的遇难者？](/articles/cdt/340980.md)
 
 5-6 [衣者褚｜惨烈的事故与催人泪下的故事](/articles/cdt/340983.md)
-
-5-6 [亮见｜在每一个替代品背后，都藏着一头人人避而不谈的大象](/articles/cdt/340986.md)
-
-5-6 [【404文库】三联生活周刊｜梅大高速塌方：没有抵达家乡的打工者](/articles/cdt/340989.md)
-
-5-6 [【CDT周报】第168期：本该好好的路，为什么走着走着就塌了？](/articles/cdt/340990.md)
 
