--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-10 [欧洲议会选举初步计票：中间派稳定过半、右翼政党大有斩获](/articles/voa/1014977.md)
+
+6-10 [美国呼吁安理会表决支持其加沙停火计划](/articles/voa/1014978.md)
+
 6-10 [欧洲议会选举的极右翼斩获让法国马克龙和德国朔尔茨失利](/articles/voa/1014979.md)
 
 6-10 [白宫：乌克兰打击俄罗斯目标后，俄罗斯在哈尔科夫的推进陷入停滞](/articles/voa/1014980.md)
@@ -596,8 +600,4 @@
 5-30 [人民币值跌跌不休，兑美元汇率创出半年多来新低](/articles/voa/1015275.md)
 
 5-29 [美国副国务卿坎贝尔提醒欧洲要严肃对待中国援俄问题](/articles/voa/1015276.md)
-
-5-29 [香港泛民主派初选案宣判在即，判决将对香港未来产生重大影响](/articles/voa/1015277.md)
-
-5-29 [菲律宾总统马科斯：中国海警新规加剧紧张局势，“令人担忧”](/articles/voa/1015278.md)
 
