--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-10 [美国驻悉尼领事馆遭涂鸦砸玻璃 澳大利亚总理予以谴责](/articles/voa/1014975.md)
+
+6-10 [平壤核武威胁日增 韩美召开新一轮核咨商小组会议](/articles/voa/1014976.md)
+
 6-10 [欧洲议会选举初步计票：中间派稳定过半、右翼政党大有斩获](/articles/voa/1014977.md)
 
 6-10 [美国呼吁安理会表决支持其加沙停火计划](/articles/voa/1014978.md)
@@ -596,8 +600,4 @@
 5-30 [特立独行的艺术囚徒 异见雕塑家严正学病逝](/articles/voa/1015273.md)
 
 5-30 [卫星爆炸，“粑粑”气球升天：朝鲜向韩国各地投送“脏弹”](/articles/voa/1015274.md)
-
-5-30 [人民币值跌跌不休，兑美元汇率创出半年多来新低](/articles/voa/1015275.md)
-
-5-29 [美国副国务卿坎贝尔提醒欧洲要严肃对待中国援俄问题](/articles/voa/1015276.md)
 
