--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-10 [反面阅读｜越出越删，15种作品的版本变化](/articles/cdt/339785.md)
+
+6-10 [【404帖子】2024年或为最后一届蒙古语高考](/articles/cdt/339791.md)
+
 6-10 [连清川｜新媒体就是人类思想史上的一段弯路](/articles/cdt/339794.md)
 
 6-10 [每日一语 2024.6.9](/articles/cdt/339796.md)
@@ -596,8 +600,4 @@
 5-6 [北青深一度｜成为“理财师”的农村老人失去了毕生积蓄](/articles/cdt/340976.md)
 
 5-6 [亮见｜一部名为“胖猫”的连续剧](/articles/cdt/340978.md)
-
-5-6 [马与人说｜谁来祭奠梅大高速的遇难者？](/articles/cdt/340980.md)
-
-5-6 [衣者褚｜惨烈的事故与催人泪下的故事](/articles/cdt/340983.md)
 
