--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-10 [新西兰总理表示欢迎中国总理李强本星期到访](/articles/voa/1014973.md)
+
+6-10 [俄媒：普京可能很快在6月访问朝鲜和越南](/articles/voa/1014974.md)
+
 6-10 [美国驻悉尼领事馆遭涂鸦砸玻璃 澳大利亚总理予以谴责](/articles/voa/1014975.md)
 
 6-10 [平壤核武威胁日增 韩美召开新一轮核咨商小组会议](/articles/voa/1014976.md)
@@ -596,8 +600,4 @@
 5-30 [以色列官员预计与哈马斯的战争将持续到年底](/articles/voa/1015271.md)
 
 5-30 [美国官员：一项减轻未来大流行病威胁的协议指日可待](/articles/voa/1015272.md)
-
-5-30 [特立独行的艺术囚徒 异见雕塑家严正学病逝](/articles/voa/1015273.md)
-
-5-30 [卫星爆炸，“粑粑”气球升天：朝鲜向韩国各地投送“脏弹”](/articles/voa/1015274.md)
 
