--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-10 [唐师三百手｜别被他们说的“躺平”给忽悠了](/articles/cdt/339777.md)
+
+6-10 [工事有料｜职校学生实习的背后：低廉时薪、不被承认、层层压迫的困境](/articles/cdt/339780.md)
+
+6-10 [新新默存｜宋石男：论屈原的个人主义](/articles/cdt/339782.md)
+
 6-10 [反面阅读｜越出越删，15种作品的版本变化](/articles/cdt/339785.md)
 
 6-10 [【404帖子】2024年或为最后一届蒙古语高考](/articles/cdt/339791.md)
@@ -594,10 +600,4 @@
 5-6 [每日一语 2024.5.6](/articles/cdt/340968.md)
 
 5-6 [二湘的十一维空间｜二湘：梅龙高速下跪的他，莫大的勇气和瞬间的生死](/articles/cdt/340971.md)
-
-5-6 [七叔东山再起｜爱国饭，是真的好吃](/articles/cdt/340974.md)
-
-5-6 [北青深一度｜成为“理财师”的农村老人失去了毕生积蓄](/articles/cdt/340976.md)
-
-5-6 [亮见｜一部名为“胖猫”的连续剧](/articles/cdt/340978.md)
 
