--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+6-10 [马斯克称德国“AfD立场听起来并不极端”](/articles/dw/1025278.md)
+
+6-10 [德国经济界呼吁欧盟推进改革](/articles/dw/1025279.md)
+
+6-10 [2024大选后：欧洲集体向右转？](/articles/dw/1025280.md)
+
 6-10 [德国“汽车教父”：欧盟若对中国电动车加征关税将带来严重后果](/articles/dw/1025281.md)
 
 6-10 [欧盟本周将宣布对中国电动车征收临时性惩罚关税](/articles/dw/1025282.md)
@@ -594,10 +600,4 @@
 5-13 [韩外长访华 称韩中应管控好分歧](/articles/dw/1025576.md)
 
 5-13 [德国法院维持选项党“疑似”极端组织认定](/articles/dw/1025577.md)
-
-5-13 [媒体：美国将对中国电动车关税提高3倍](/articles/dw/1025578.md)
-
-5-13 [没想让你脱单! 交友软件背后的真相](/articles/dw/1025579.md)
-
-5-13 [比亚迪计划在欧洲建立第二家装配厂](/articles/dw/1025580.md)
 
