--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-10 [中国秀巷战机器狗威吓台湾，军事专家:战场实用性待商榷](/articles/voa/1014971.md)
+
 6-10 [聿文视界：台湾也是美国的“核心利益”](/articles/voa/1014972.md)
 
 6-10 [新西兰总理表示欢迎中国总理李强本星期到访](/articles/voa/1014973.md)
@@ -598,6 +600,4 @@
 5-30 [比利时警方搜查欧洲议会雇员的家和办公室](/articles/voa/1015269.md)
 
 5-30 [俄罗斯威胁加剧之际，布林肯承诺美国对摩尔多瓦的支持](/articles/voa/1015270.md)
-
-5-30 [以色列官员预计与哈马斯的战争将持续到年底](/articles/voa/1015271.md)
 
