--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-10 [澳大利亚人担忧中国威胁，专家:中国军事强势犹如豆腐渣工程](/articles/voa/1014968.md)
+
+6-10 [中国籍男子驾快艇私闯台湾本岛，被捕后自称赴台投奔自由](/articles/voa/1014969.md)
+
+6-10 [欧盟本周将宣布对中国电动车征收的进口关税税率](/articles/voa/1014970.md)
+
 6-10 [中国秀巷战机器狗威吓台湾，军事专家:战场实用性待商榷](/articles/voa/1014971.md)
 
 6-10 [聿文视界：台湾也是美国的“核心利益”](/articles/voa/1014972.md)
@@ -594,10 +600,4 @@
 5-30 [“熊猫热”归来：华盛顿国家动物园年底前将再次迎来两只大熊猫](/articles/voa/1015266.md)
 
 5-30 [美副财长访基辅，承诺加紧对俄制裁](/articles/voa/1015267.md)
-
-5-30 [中国解除对五家澳大利亚牛肉出口商的禁令](/articles/voa/1015268.md)
-
-5-30 [比利时警方搜查欧洲议会雇员的家和办公室](/articles/voa/1015269.md)
-
-5-30 [俄罗斯威胁加剧之际，布林肯承诺美国对摩尔多瓦的支持](/articles/voa/1015270.md)
 
