--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-11 [韩国恢复对朝鲜的高音喇叭广播后，金正恩妹妹金与正威胁对韩国展开新的回击](/articles/voa/1014965.md)
+
 6-10 [瑞士确认有90个国家及组织参加本周的乌克兰和平会议](/articles/voa/1014966.md)
 
 6-10 [布林肯再抵中东为停火斡旋，以军在加沙中部南部持续向前推进](/articles/voa/1014967.md)
@@ -598,6 +600,4 @@
 5-30 [对华加征关税为何也有助于维持美军在未来战争中的优势？](/articles/voa/1015263.md)
 
 5-30 [陪审团要求重新听取特朗普封口费刑事案件的关键证词记录](/articles/voa/1015264.md)
-
-5-30 [第一批在美国训练F-16飞行的乌克兰飞行员毕业](/articles/voa/1015265.md)
 
