--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-11 [捷克冒激怒中国的风险在台湾开设文化中心](/articles/voa/1014962.md)
+
+6-11 [载有马拉维副总统的飞机失联](/articles/voa/1014963.md)
+
 6-11 [世界卫生组织：气候危机正在制造健康危机](/articles/voa/1014964.md)
 
 6-11 [韩国恢复对朝鲜的高音喇叭广播后，金正恩妹妹金与正威胁对韩国展开新的回击](/articles/voa/1014965.md)
@@ -596,8 +600,4 @@
 5-30 [习近平接待阿拉伯国家领导人来访 称要对加沙冲突发出“中阿共同声音”](/articles/voa/1015260.md)
 
 5-30 [香港法院判决14名泛民主派人士“串谋颠覆国家政权”罪成](/articles/voa/1015261.md)
-
-5-30 [香港“47人初选案”14人被判“颠覆国家政权罪”成立](/articles/voa/1015262.md)
-
-5-30 [对华加征关税为何也有助于维持美军在未来战争中的优势？](/articles/voa/1015263.md)
 
