--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-11 [新研究显示非洲象以独特的名字彼此呼应](/articles/voa/1014955.md)
+
 6-11 [美国和波兰联手帮助乌克兰打击俄罗斯的虚假信息](/articles/voa/1014956.md)
 
 6-11 [巴基斯坦总理访华的主要看点](/articles/voa/1014957.md)
@@ -598,6 +600,4 @@
 5-30 [好莱坞电影《美国内战》切合北京主旋律 中国影迷期待上映](/articles/voa/1015253.md)
 
 5-30 [多国政府和人权团体谴责香港依国安法定罪14名民主派人士](/articles/voa/1015254.md)
-
-5-30 [一连四波对美制裁，中共两岸博弈扩大到美国身上？](/articles/voa/1015255.md)
 
