--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-11 [中国5月出口创一年多以来最快增速](/articles/nyt/1042693.md)
+
 6-7 [强人领袖遇挫，全球选举年政治现状大洗牌？](/articles/nyt/1042694.md)
 
 6-7 [诺曼底登陆80周年：新的战争阴云下，我们在纪念什么](/articles/nyt/1042695.md)
@@ -598,6 +600,4 @@
 3-4 [面对低收入、不平等、人口危机，日本人为何“放弃了”](/articles/nyt/1042991.md)
 
 3-4 [MIT华裔博士生承认杀害耶鲁华裔研究生](/articles/nyt/1042992.md)
-
-3-4 [超半数四年前支持拜登的选民现在认为他“太老了”](/articles/nyt/1042993.md)
 
