--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-11 [美国四名大学教师在中国吉林被刺伤](/articles/voa/1014953.md)
+
+6-11 [又一个TikTok? 美议员担心新闻应用程序NewsBreak的中国背景，呼吁进行严格审查](/articles/voa/1014954.md)
+
 6-11 [新研究显示非洲象以独特的名字彼此呼应](/articles/voa/1014955.md)
 
 6-11 [美国和波兰联手帮助乌克兰打击俄罗斯的虚假信息](/articles/voa/1014956.md)
@@ -596,8 +600,4 @@
 5-30 [香格里拉对话开幕在即，美中关系、俄乌以哈战争及南中国海争端成热门议题](/articles/voa/1015251.md)
 
 5-30 [美国新加坡执法部门联手侦破僵尸网络欺诈案，主犯王云鹤被捕](/articles/voa/1015252.md)
-
-5-30 [好莱坞电影《美国内战》切合北京主旋律 中国影迷期待上映](/articles/voa/1015253.md)
-
-5-30 [多国政府和人权团体谴责香港依国安法定罪14名民主派人士](/articles/voa/1015254.md)
 
