--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-11 [四名美国教师在吉林一公园内遇袭](/articles/nyt/1042691.md)
+
 6-11 [重启核军备竞赛？应对中俄核战略，美国考虑扩大核武库](/articles/nyt/1042692.md)
 
 6-11 [中国5月出口创一年多以来最快增速](/articles/nyt/1042693.md)
@@ -598,6 +600,4 @@
 3-5 [中国取消总理记者会，逾30年传统被终止](/articles/nyt/1042989.md)
 
 3-4 [俄罗斯官方如何从公共话语中“抹去”纳瓦尔尼](/articles/nyt/1042990.md)
-
-3-4 [面对低收入、不平等、人口危机，日本人为何“放弃了”](/articles/nyt/1042991.md)
 
