--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-11 [外部威胁更加突出 小马科斯称必须为发生不测事件做好准备](/articles/voa/1014948.md)
+
+6-11 [朝鲜士兵上周末短暂越过边境 韩国军方鸣枪示警](/articles/voa/1014949.md)
+
 6-11 [解读欧洲议会选举结果](/articles/voa/1014950.md)
 
 6-11 [美参议院扩大对宝马使用被禁中国供应商零件的调查](/articles/voa/1014951.md)
@@ -596,8 +600,4 @@
 5-31 [中俄深化关系对印度来说既是挑战也是机遇](/articles/voa/1015246.md)
 
 5-31 [中朝分歧罕见公开化，平壤谴责中日韩声明“去核化”是“政治挑衅”](/articles/voa/1015247.md)
-
-5-31 [欧洲扫荡僵尸网络犯罪团伙，逮捕四名植入恶意和勒索软件涉案人](/articles/voa/1015248.md)
-
-5-31 [香港民主派初选案14不认罪被告罪成6月底求情 两被告脱罪律政司提上诉](/articles/voa/1015249.md)
 
