--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-11 [大熊猫能“拯救”中美关系吗](/articles/nyt/1042689.md)
+
 6-11 [欢迎来到人工智能手机时代](/articles/nyt/1042690.md)
 
 6-11 [四名美国教师在吉林一公园内遇袭](/articles/nyt/1042691.md)
@@ -598,6 +600,4 @@
 3-5 [中美殊途同归？当大规模监控成为常态](/articles/nyt/1042987.md)
 
 3-5 [中国将2024年经济增长目标设定为5%](/articles/nyt/1042988.md)
-
-3-5 [中国取消总理记者会，逾30年传统被终止](/articles/nyt/1042989.md)
 
