--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-11 [中国总理李强本周将访问新西兰和澳大利亚](/articles/voa/1014944.md)
+
+6-11 [四名美国大学教师在吉林遭刺伤 中国外交部称“偶发事件”](/articles/voa/1014945.md)
+
+6-11 [台湾称驾快艇非法闯入码头的被捕男子为中国前海军艇长](/articles/voa/1014946.md)
+
 6-11 [G7领导人本周齐聚意大利 聚焦讨论对乌克兰的支持](/articles/voa/1014947.md)
 
 6-11 [外部威胁更加突出 小马科斯称必须为发生不测事件做好准备](/articles/voa/1014948.md)
@@ -594,10 +600,4 @@
 5-31 [封口费刑事案审判做出裁决，陪审团判定特朗普有罪](/articles/voa/1015242.md)
 
 5-31 [美国应如何通过高科技出口管制来阻遏北京武力攻台？](/articles/voa/1015243.md)
-
-5-31 [分析人士看到朝鲜与中国关系出现紧张迹象](/articles/voa/1015244.md)
-
-5-31 [斯洛文尼亚政府支持承认巴勒斯坦国](/articles/voa/1015245.md)
-
-5-31 [中俄深化关系对印度来说既是挑战也是机遇](/articles/voa/1015246.md)
 
