--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-11 [维舟｜谁都想查禁自己不喜欢的东西](/articles/cdt/339758.md)
+
 6-11 [每日一语 2024.6.10](/articles/cdt/339762.md)
 
 6-10 [水瓶纪元｜蓬蒿剧场创始人王翔败诉：当公众人物被指控性骚扰](/articles/cdt/339766.md)
@@ -598,6 +600,4 @@
 5-7 [林中的维吉尔｜香飘飘这个“讽日”口号，喊得确实聪明啊！](/articles/cdt/340944.md)
 
 5-7 [声道｜百度副总裁的狼性表演，翻车了](/articles/cdt/340946.md)
-
-5-7 [极昼工作室｜五位催收员的讲述：负债者越来越多，钱却越来越难催](/articles/cdt/340952.md)
 
