--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-11 [环球疯人院｜福布斯：中国的中产阶级正在消失](/articles/cdt/339745.md)
+
+6-11 [匿名网友｜返乡杂谈偶感：人们生活在抖音创造的世界里](/articles/cdt/339749.md)
+
+6-11 [麟阁经略｜在吉林被捅的四名外国人，是对华友好人士](/articles/cdt/339755.md)
+
 6-11 [维舟｜谁都想查禁自己不喜欢的东西](/articles/cdt/339758.md)
 
 6-11 [每日一语 2024.6.10](/articles/cdt/339762.md)
@@ -594,10 +600,4 @@
 5-7 [旧闻评论｜人们怎样议论梅大高速惨剧？](/articles/cdt/340938.md)
 
 5-7 [关尔东｜当你们高呼“乌拉”时，想想受难的祖先](/articles/cdt/340940.md)
-
-5-7 [真实故事计划Pro｜臭车背后，住在车里的网约车司机](/articles/cdt/340942.md)
-
-5-7 [林中的维吉尔｜香飘飘这个“讽日”口号，喊得确实聪明啊！](/articles/cdt/340944.md)
-
-5-7 [声道｜百度副总裁的狼性表演，翻车了](/articles/cdt/340946.md)
 
