--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-11 [德国主办乌克兰重建会议 签署战后重建意向声明](/articles/dw/1025263.md)
+
+6-11 [新航将赔偿气流颠簸事件机上乘客](/articles/dw/1025264.md)
+
 6-11 [可以免上早课的德国中学](/articles/dw/1025265.md)
 
 6-11 [中国战机东海盘旋荷兰军舰 双方口水战继续](/articles/dw/1025266.md)
@@ -596,8 +600,4 @@
 5-14 [为何守住哈尔科夫对乌克兰如此重要](/articles/dw/1025561.md)
 
 5-14 [美国宣布100%关税后 欧洲方面表态审慎](/articles/dw/1025562.md)
-
-5-14 [不顾数十万人抗议 格鲁吉亚议会强推“外国代理人”法](/articles/dw/1025563.md)
-
-5-14 [腿腳和頭腦同時練](/articles/dw/1025564.md)
 
