--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-11 [周泽｜按政府要求签了个名，北京一拆迁户被判无期徒刑](/articles/cdt/339739.md)
+
+6-11 [XCiOS俱乐部｜iOS18 即将推送，核心 Ai 功能国内可能被禁止使用](/articles/cdt/339741.md)
+
+6-11 [无声无光｜四名美国人被刺伤后](/articles/cdt/339743.md)
+
 6-11 [环球疯人院｜福布斯：中国的中产阶级正在消失](/articles/cdt/339745.md)
 
 6-11 [匿名网友｜返乡杂谈偶感：人们生活在抖音创造的世界里](/articles/cdt/339749.md)
@@ -594,10 +600,4 @@
 5-8 [BJ大土豆｜通杀](/articles/cdt/340929.md)
 
 5-8 [【网络民议】“香飘飘不是爱国，是爱钱”](/articles/cdt/340933.md)
-
-5-7 [每日一语 2024.5.7](/articles/cdt/340935.md)
-
-5-7 [旧闻评论｜人们怎样议论梅大高速惨剧？](/articles/cdt/340938.md)
-
-5-7 [关尔东｜当你们高呼“乌拉”时，想想受难的祖先](/articles/cdt/340940.md)
 
