--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-11 [每日一语 2024.6.11](/articles/cdt/339737.md)
+
 6-11 [周泽｜按政府要求签了个名，北京一拆迁户被判无期徒刑](/articles/cdt/339739.md)
 
 6-11 [XCiOS俱乐部｜iOS18 即将推送，核心 Ai 功能国内可能被禁止使用](/articles/cdt/339741.md)
@@ -598,6 +600,4 @@
 5-8 [【404文库】常识流通处｜强制购买公墓，湖北随州太随意](/articles/cdt/340926.md)
 
 5-8 [BJ大土豆｜通杀](/articles/cdt/340929.md)
-
-5-8 [【网络民议】“香飘飘不是爱国，是爱钱”](/articles/cdt/340933.md)
 
