--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-11 [中国消费低迷 商家狂打价格战，媒体:害人害己](/articles/voa/1014938.md)
+
+6-11 [哈马斯称接受安理会支持的加沙停火协议，美认为是“有希望的迹象”](/articles/voa/1014939.md)
+
 6-11 [印外长：印度新政府将聚焦与北京解决边界问题](/articles/voa/1014940.md)
 
 6-11 [越南国家主席呼吁北京妥善处理海洋争端，尊重他国利益](/articles/voa/1014941.md)
@@ -596,8 +600,4 @@
 5-31 [伦敦纪念六四“被删除的记忆”展览：幸存者们作证，珍贵文物展出](/articles/voa/1015236.md)
 
 5-31 [特朗普在封口费刑事案中被判有罪，34项指控均告成立](/articles/voa/1015237.md)
-
-5-31 [原声带： 裴新：8964｜我被中国政府驱逐出境](/articles/voa/1015238.md)
-
-5-31 [华盛顿允许乌克兰使用美国提供的武器在哈尔科夫附近打击俄罗斯境内](/articles/voa/1015239.md)
 
