--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-12 [俄罗斯与白俄罗斯军队开始举行战术核武器第二阶段演习](/articles/voa/1014935.md)
+
+6-12 [快讯：陪审团裁定拜登总统之子犯有三项重罪](/articles/voa/1014936.md)
+
+6-12 [泽连斯基：乌克兰需要加强空防和能源系统重建援助](/articles/voa/1014937.md)
+
 6-11 [中国消费低迷 商家狂打价格战，媒体:害人害己](/articles/voa/1014938.md)
 
 6-11 [哈马斯称接受安理会支持的加沙停火协议，美认为是“有希望的迹象”](/articles/voa/1014939.md)
@@ -594,10 +600,4 @@
 5-31 [特朗普被定罪上中国社媒热搜榜，网民期待美国因此爆发内乱](/articles/voa/1015233.md)
 
 5-31 [2024香格里拉对话重头戏：美中防长首次面对面，他们到底要谈什么？](/articles/voa/1015234.md)
-
-5-31 [越南抗议中国在南中国海部署医院船](/articles/voa/1015235.md)
-
-5-31 [伦敦纪念六四“被删除的记忆”展览：幸存者们作证，珍贵文物展出](/articles/voa/1015236.md)
-
-5-31 [特朗普在封口费刑事案中被判有罪，34项指控均告成立](/articles/voa/1015237.md)
 
