--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-12 [【网络民议】在最安全的国家里走路碰撞易被捅](/articles/cdt/339735.md)
+
 6-11 [每日一语 2024.6.11](/articles/cdt/339737.md)
 
 6-11 [周泽｜按政府要求签了个名，北京一拆迁户被判无期徒刑](/articles/cdt/339739.md)
@@ -598,6 +600,4 @@
 5-8 [三联生活周刊｜存续14天的哥大“加沙团结营地”：美国高校学生在反对什么？](/articles/cdt/340923.md)
 
 5-8 [【404文库】常识流通处｜强制购买公墓，湖北随州太随意](/articles/cdt/340926.md)
-
-5-8 [BJ大土豆｜通杀](/articles/cdt/340929.md)
 
