--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-12 [前中国海军艇长驾快艇抵台“投奔自由”？ 学者:中方恐刻意挑衅台军交战准则](/articles/voa/1014934.md)
+
 6-12 [俄罗斯与白俄罗斯军队开始举行战术核武器第二阶段演习](/articles/voa/1014935.md)
 
 6-12 [快讯：陪审团裁定拜登总统之子犯有三项重罪](/articles/voa/1014936.md)
@@ -598,6 +600,4 @@
 5-31 [美国授权乌克兰使用美国武器打击俄罗斯 俄乌继续攻击对方目标](/articles/voa/1015232.md)
 
 5-31 [特朗普被定罪上中国社媒热搜榜，网民期待美国因此爆发内乱](/articles/voa/1015233.md)
-
-5-31 [2024香格里拉对话重头戏：美中防长首次面对面，他们到底要谈什么？](/articles/voa/1015234.md)
 
