--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-12 [约旦会谈重点讨论巴勒斯坦人道需求，美国同时推动以哈停火](/articles/voa/1014930.md)
+
+6-12 [美国将涉及新疆强迫劳动的中国三家海鲜、铝业和鞋类实体列入制裁清单](/articles/voa/1014931.md)
+
+6-12 [陪审团裁定亨特·拜登三项涉枪重罪均成立，乔·拜登总统表示接受本案结果并尊重司法程序](/articles/voa/1014932.md)
+
 6-12 [维吾尔一周新闻回顾：6月3日-10日](/articles/voa/1014933.md)
 
 6-12 [前中国海军艇长驾快艇抵台“投奔自由”？ 学者:中方恐刻意挑衅台军交战准则](/articles/voa/1014934.md)
@@ -594,10 +600,4 @@
 5-31 [美国最新报告显示俄罗斯在乌克兰战争中使用了朝鲜制造的导弹](/articles/voa/1015228.md)
 
 5-31 [台湾指控8家中企非法经营，中国将恢复对134项台湾产品征收关税](/articles/voa/1015229.md)
-
-5-31 [朝鲜称多管火箭射击操练对韩国发动先发制人的攻击](/articles/voa/1015230.md)
-
-5-31 [美英连手打击13个胡塞目标，中国语调转变](/articles/voa/1015231.md)
-
-5-31 [美国授权乌克兰使用美国武器打击俄罗斯 俄乌继续攻击对方目标](/articles/voa/1015232.md)
 
