--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-12 [四环青年｜儿慈会千万善款被卷走，钱的去向查清了吗](/articles/cdt/339710.md)
+
+6-12 [南方周末｜状告那个网暴者：公安局发言人侮辱遇害者家属被判道歉](/articles/cdt/339712.md)
+
+6-12 [林中的维吉尔｜那个自以为很“爱国”的日本行凶者](/articles/cdt/339715.md)
+
+6-12 [关尔东｜义和团的“爱”，我承受不起](/articles/cdt/339717.md)
+
 6-12 [【网络民议】在最安全的国家里走路碰撞易被捅](/articles/cdt/339735.md)
 
 6-11 [每日一语 2024.6.11](/articles/cdt/339737.md)
@@ -592,12 +600,4 @@
 5-9 [张3丰的世界｜在纽约遇见秦晖老师](/articles/cdt/340912.md)
 
 5-9 [城市的地得｜仍有孩子认真学新闻](/articles/cdt/340915.md)
-
-5-8 [那些原本是废话的常识｜“宜居城市”多半不宜居，普通人要尽量远离互害社会](/articles/cdt/340918.md)
-
-5-8 [每日人物｜香飘飘，搬起流量砸自己的脚](/articles/cdt/340921.md)
-
-5-8 [三联生活周刊｜存续14天的哥大“加沙团结营地”：美国高校学生在反对什么？](/articles/cdt/340923.md)
-
-5-8 [【404文库】常识流通处｜强制购买公墓，湖北随州太随意](/articles/cdt/340926.md)
 
