--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+6-12 [赞习近平是“卓越领导人”：谷歌AI机器人的亲北京“立场”让美议员担忧](/articles/voa/1014921.md)
+
+6-12 [哈马斯和盟友准备就停火“积极应对”以色列](/articles/voa/1014922.md)
+
+6-12 [乌克兰和平峰会在即，中国缺席会重创其国际声誉吗？](/articles/voa/1014923.md)
+
+6-12 [加拿大把叛国指称纳入对外国干涉选举的调查；反对党领袖：无现任国会议员有叛国行为](/articles/voa/1014924.md)
+
 6-12 [因违反制裁向中国出售伊朗石油的两名德克萨斯男子被判处45个月监禁](/articles/voa/1014925.md)
 
 6-12 [伊朗“精心策划”的总统选举将由强硬派候选人主导](/articles/voa/1014926.md)
@@ -592,12 +600,4 @@
 6-1 [美国宣布对参与国安法实施的中港官员实施新的签证限制](/articles/voa/1015219.md)
 
 6-1 [中国再砍对台关税减让 分析：加速台湾“离开中国”](/articles/voa/1015220.md)
-
-6-1 [美国副财长再次警告中企：不要向俄罗斯出口军民两用物资](/articles/voa/1015221.md)
-
-5-31 [十大民主国家外长发表联合声明，谴责朝鲜向俄罗斯提供武器](/articles/voa/1015222.md)
-
-5-31 [美国立场松动之后，柏林同意乌克兰使用德国武器袭击俄境内部分目标](/articles/voa/1015223.md)
-
-5-31 [中国制造业指数意外收缩 内需疲软出口艰难，专家：经济增长目标面临威胁](/articles/voa/1015224.md)
 
