--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-12 [谋划、突袭、交火与死亡：还原以色列营救人质行动](/articles/nyt/1042688.md)
+
 6-11 [大熊猫能“拯救”中美关系吗](/articles/nyt/1042689.md)
 
 6-11 [欢迎来到人工智能手机时代](/articles/nyt/1042690.md)
@@ -598,6 +600,4 @@
 3-5 [危险的外国人？日本警方被指执法存在“种族定性”](/articles/nyt/1042986.md)
 
 3-5 [中美殊途同归？当大规模监控成为常态](/articles/nyt/1042987.md)
-
-3-5 [中国将2024年经济增长目标设定为5%](/articles/nyt/1042988.md)
 
