--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-12 [港府援引新国安法 撤销罗冠聪等六名流亡港人的香港护照](/articles/voa/1014920.md)
+
 6-12 [赞习近平是“卓越领导人”：谷歌AI机器人的亲北京“立场”让美议员担忧](/articles/voa/1014921.md)
 
 6-12 [哈马斯和盟友准备就停火“积极应对”以色列](/articles/voa/1014922.md)
@@ -598,6 +600,4 @@
 6-1 [草根网红窜起 网络主播成为新职业 分析:中国“直播兴国”不易](/articles/voa/1015218.md)
 
 6-1 [美国宣布对参与国安法实施的中港官员实施新的签证限制](/articles/voa/1015219.md)
-
-6-1 [中国再砍对台关税减让 分析：加速台湾“离开中国”](/articles/voa/1015220.md)
 
