--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-12 [一个被判有罪的儿子对拜登意味着什么](/articles/nyt/1042686.md)
+
 6-12 [美国将三家中国公司列入制裁名单，称涉及新疆强迫劳动](/articles/nyt/1042687.md)
 
 6-12 [谋划、突袭、交火与死亡：还原以色列营救人质行动](/articles/nyt/1042688.md)
@@ -598,6 +600,4 @@
 3-6 [后新冠时代，更加封闭的“两会”](/articles/nyt/1042984.md)
 
 3-6 [中国年度政府工作报告释放了哪些信号](/articles/nyt/1042985.md)
-
-3-5 [危险的外国人？日本警方被指执法存在“种族定性”](/articles/nyt/1042986.md)
 
