--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-12 [日本据报将制裁向俄罗斯提供援助的第三国企业，包括中国公司在内](/articles/voa/1014916.md)
+
+6-12 [普京访问平壤前 朝鲜领导人金正恩夸耀与俄罗斯的牢固关系](/articles/voa/1014917.md)
+
+6-12 [美国拟扩大制裁向俄罗斯出口芯片的中国第三方卖家](/articles/voa/1014918.md)
+
 6-12 [无奈与焦虑：被夹在美中博弈下的中国留学生](/articles/voa/1014919.md)
 
 6-12 [港府援引新国安法 撤销罗冠聪等六名流亡港人的香港护照](/articles/voa/1014920.md)
@@ -594,10 +600,4 @@
 6-1 [特朗普誓言对封口费案有罪判决提出上诉](/articles/voa/1015214.md)
 
 6-1 [专访美国前副国务卿阿米蒂奇： 中国越欺负台湾，国际社会就越支持台湾](/articles/voa/1015215.md)
-
-6-1 [拜登呼吁哈马斯接受以色列的新停火计划](/articles/voa/1015216.md)
-
-6-1 [中国电商Temu被欧盟列为超大型在线平台，将依《数字服务法》受最严审视。](/articles/voa/1015217.md)
-
-6-1 [草根网红窜起 网络主播成为新职业 分析:中国“直播兴国”不易](/articles/voa/1015218.md)
 
