--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-12 [【404文库】唐师三百手｜下一款iphone，我们与世界从此分道扬镳](/articles/cdt/339706.md)
+
 6-12 [四环青年｜儿慈会千万善款被卷走，钱的去向查清了吗](/articles/cdt/339710.md)
 
 6-12 [南方周末｜状告那个网暴者：公安局发言人侮辱遇害者家属被判道歉](/articles/cdt/339712.md)
@@ -598,6 +600,4 @@
 5-9 [风声OPINION｜网恋自杀的胖猫悲剧，是感情问题还是法律问题？](/articles/cdt/340907.md)
 
 5-9 [张3丰的世界｜在纽约遇见秦晖老师](/articles/cdt/340912.md)
-
-5-9 [城市的地得｜仍有孩子认真学新闻](/articles/cdt/340915.md)
 
