--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-12 [美国小提琴家卡罗尔去世，文革中“破冰”访华](/articles/nyt/1042684.md)
+
 6-12 [5亿包辛拉面和H Mart们的崛起：亚洲超市如何重塑美国](/articles/nyt/1042685.md)
 
 6-12 [一个被判有罪的儿子对拜登意味着什么](/articles/nyt/1042686.md)
@@ -598,6 +600,4 @@
 3-6 [英国国王查尔斯三世确诊癌症，将暂停公开活动](/articles/nyt/1042982.md)
 
 3-6 [访问台湾后，我最担心的不是中国，而是美国](/articles/nyt/1042983.md)
-
-3-6 [后新冠时代，更加封闭的“两会”](/articles/nyt/1042984.md)
 
