--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-12 [古村之友｜汤敏：中华儿慈会犯罪事件彻底宣告了现行社会组织制度的全面破产](/articles/cdt/339699.md)
+
 6-12 [极目新闻｜吉林银行回应“取款需派出所同意”：系防范电诈](/articles/cdt/339701.md)
 
 6-12 [剥洋葱people｜两年被家暴16次后，她终于走进了离婚法庭](/articles/cdt/339703.md)
@@ -598,6 +600,4 @@
 5-9 [保护卫士｜李老师：全面的跨国镇压故事](/articles/cdt/340900.md)
 
 5-9 [每日一语 2024.5.8](/articles/cdt/340903.md)
-
-5-9 [谷雨实验室｜法学教授们的最小单位堡垒](/articles/cdt/340905.md)
 
