--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-12 [联合国人权高专办：以色列解救人质行动或构成战争罪](/articles/dw/1025252.md)
+
 6-12 [美军高官：中国若攻台 美军将把台海变地狱](/articles/dw/1025253.md)
 
 6-12 [总统拜登之子被判有罪 民主党：证明司法正常运作](/articles/dw/1025254.md)
@@ -598,6 +600,4 @@
 5-15 [德语媒体：一场贸易战的开始](/articles/dw/1025550.md)
 
 5-15 [不满TikTok面临遭禁 八名用户状告美国政府](/articles/dw/1025551.md)
-
-5-15 [斯洛伐克总理菲佐遇刺受伤](/articles/dw/1025552.md)
 
