--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-13 [关于意大利七国集团峰会 你需要知道的几件事](/articles/voa/1014903.md)
+
 6-13 [美国国会通过法案 要求行政部门反击中国有关西藏的虚假信息](/articles/voa/1014904.md)
 
 6-13 [四艘俄罗斯海军舰船到古巴访问，美军严密监视](/articles/voa/1014905.md)
@@ -598,6 +600,4 @@
 6-1 [民调：特朗普被判有罪后 一成共和党选民不太可能投票给特朗普](/articles/voa/1015201.md)
 
 6-1 [英国智库报告:亚洲军演激增，中国规模和复杂性落后于美国](/articles/voa/1015202.md)
-
-6-1 [中共“登陆艇”罕見入侵台湾金门限制水域 台军方加强戒备](/articles/voa/1015203.md)
 
