--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-13 [美国扩大对俄罗斯的制裁，以阻止中国等国家与莫斯科做生意](/articles/voa/1014898.md)
+
+6-13 [国事光析: 中国社会溃败的国际扩散](/articles/voa/1014899.md)
+
 6-13 [美国通胀5月份连续两月减缓；美联储看到进展但预测今年只降息一次](/articles/voa/1014900.md)
 
 6-13 [泽连斯基：俄军空袭他的家乡并造成人员伤亡](/articles/voa/1014901.md)
@@ -596,8 +600,4 @@
 6-1 [拜登停火方案获多方支持，以色列坚持战争目标，拉法攻击还在继续](/articles/voa/1015196.md)
 
 6-1 [专访何晓清：从六四、香港到白纸 以记忆作为反抗](/articles/voa/1015197.md)
-
-6-1 [俄军大规模袭击乌克兰能源和基础设施，基辅呼吁盟友提供更多防空系统](/articles/voa/1015198.md)
-
-6-1 [六四35周年前夕 天安门母亲呼吁与习近平对话重申三大诉求](/articles/voa/1015199.md)
 
