--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-13 [美国已不是世界老大](/articles/nyt/1042683.md)
+
 6-12 [美国小提琴家卡罗尔去世，文革中“破冰”访华](/articles/nyt/1042684.md)
 
 6-12 [5亿包辛拉面和H Mart们的崛起：亚洲超市如何重塑美国](/articles/nyt/1042685.md)
@@ -598,6 +600,4 @@
 3-6 [被曝将批评中国作者排除在外，雨果奖陷争议](/articles/nyt/1042981.md)
 
 3-6 [英国国王查尔斯三世确诊癌症，将暂停公开活动](/articles/nyt/1042982.md)
-
-3-6 [访问台湾后，我最担心的不是中国，而是美国](/articles/nyt/1042983.md)
 
