--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-13 [欧盟宣布对中国电动汽车征收额外关税，最高达38%](/articles/nyt/1042682.md)
+
 6-13 [美国已不是世界老大](/articles/nyt/1042683.md)
 
 6-12 [美国小提琴家卡罗尔去世，文革中“破冰”访华](/articles/nyt/1042684.md)
@@ -598,6 +600,4 @@
 3-6 [被取消的总理记者会：中国改革时代的最后痕迹](/articles/nyt/1042980.md)
 
 3-6 [被曝将批评中国作者排除在外，雨果奖陷争议](/articles/nyt/1042981.md)
-
-3-6 [英国国王查尔斯三世确诊癌症，将暂停公开活动](/articles/nyt/1042982.md)
 
