--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-13 [中资矿场获贷款引发印尼民众抗议，环境风险担忧升级](/articles/voa/1014892.md)
+
+6-13 [阵容庞大，中俄缺席：三大要点带你看懂乌克兰和平峰会](/articles/voa/1014893.md)
+
 6-13 [东盟争取到2026年达成《南中国海行为准则》，但其法律约束力尚不确定](/articles/voa/1014894.md)
 
 6-13 [联合国人权事务专员：朝鲜人面临毫无希望的生活](/articles/voa/1014895.md)
@@ -596,8 +600,4 @@
 6-2 [35年后，打开“六四天安门”的时光胶囊](/articles/voa/1015190.md)
 
 6-2 [泽连斯基出席新加坡香格里拉会议，寻求对乌克兰和平峰会的支持](/articles/voa/1015191.md)
-
-6-2 [中国“选择性”批评美国人权纪录到底希望达到什么目的？](/articles/voa/1015192.md)
-
-6-2 [六四35周年前夕，海外人权活动人士遭死亡威胁，洛杉矶民主人士抗议中共长臂管辖](/articles/voa/1015193.md)
 
