--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-13 [中国，全球最大的无人驾驶试验场](/articles/nyt/1042680.md)
+
 6-13 [美国宣布新金融制裁措施，旨在切断中俄技术联系](/articles/nyt/1042681.md)
 
 6-13 [欧盟宣布对中国电动汽车征收额外关税，最高达38%](/articles/nyt/1042682.md)
@@ -598,6 +600,4 @@
 3-7 [中国“走线客”涌入纽约唐人街](/articles/nyt/1042978.md)
 
 3-6 [马尔代夫为何成为中印“必争“之地](/articles/nyt/1042979.md)
-
-3-6 [被取消的总理记者会：中国改革时代的最后痕迹](/articles/nyt/1042980.md)
 
