--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-13 [歐企不挺對中加關稅 食品業憂成北京報復對象](/articles/dw/1025247.md)
+
 6-13 [G7峰會將指中國產能過剩 聚焦俄被凍資產](/articles/dw/1025248.md)
 
 6-13 [关税争议：欧盟对中国电动汽车加征最高38%关税](/articles/dw/1025249.md)
@@ -598,6 +600,4 @@
 5-16 [微软征询中国AI团队迁移意向](/articles/dw/1025545.md)
 
 5-16 [斯洛伐克总理遭槍擊 凶嫌“政治动机”犯案](/articles/dw/1025546.md)
-
-5-16 [「老朋友」再相會 普丁抵北京會習近平](/articles/dw/1025547.md)
 
