--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-13 [马克龙宣布暂停引发新喀里多尼亚骚乱的选举改革](/articles/voa/1014888.md)
+
 6-13 [李强首访新西兰 示警称“两国间的分歧不应成为鸿沟”](/articles/voa/1014889.md)
 
 6-13 [中国敦促欧盟“重新考虑”加征电动汽车关税决定](/articles/voa/1014890.md)
@@ -598,6 +600,4 @@
 6-2 [中国探测器成功降落在月球背面](/articles/voa/1015186.md)
 
 6-2 [美国议员要求联调局汇报金斯瑞生物科技与中国的关系](/articles/voa/1015187.md)
-
-6-2 [香港47人案判辞将议员协调投反对票视为颠覆国家政权 学者指荒谬矛盾](/articles/voa/1015188.md)
 
