--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-13 [凤羽财经｜感谢阿里让我认识这个有才华的女生](/articles/cdt/339683.md)
+
+6-13 [每日一语 2024.6.12](/articles/cdt/339685.md)
+
 6-13 [老丁语云｜林毅夫教授，网民喊您兑现“光刻机三年之约”……](/articles/cdt/339687.md)
 
 6-13 [无声无光｜蠢货，我当然是中国人](/articles/cdt/339691.md)
@@ -596,8 +600,4 @@
 5-10 [衣者褚｜他们是怎么做到如此冷漠的？](/articles/cdt/340870.md)
 
 5-10 [剑客写字的地方｜真有人去海参崴看阅兵了](/articles/cdt/340873.md)
-
-5-10 [老丁语云｜张维为被学生提问“如何办瑞士永居”事件更多细节曝出](/articles/cdt/340892.md)
-
-5-10 [建设性意见｜说好的房住不炒呢？](/articles/cdt/340893.md)
 
