--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-13 [欧盟对华汽车关税：征多少？怎么征？](/articles/dw/1025242.md)
+
 6-13 [长平观察：地球照常升起](/articles/dw/1025243.md)
 
 6-13 [美副国务卿：相信北京集中精力搞经济、想稳定对美关系](/articles/dw/1025244.md)
@@ -598,6 +600,4 @@
 5-17 [客座評論：禁制願榮光與經貿辦間諜案](/articles/dw/1025540.md)
 
 5-16 [客座评论：习普会面面临的两大棘手问题](/articles/dw/1025541.md)
-
-5-16 [中俄“深化”关系 何为新时代战略伙伴？](/articles/dw/1025542.md)
 
