--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-13 [中国暗示将对欧盟乳制品及猪肉进行反补贴及反倾销调查](/articles/voa/1014884.md)
+
+6-13 [赖清德接受《时代》周刊采访：北京应正视中华民国的存在，互不隶属是事实陈述](/articles/voa/1014885.md)
+
 6-13 [中国青年失业率居高不下 增加就业出路何在？](/articles/voa/1014886.md)
 
 6-13 [AI武器陆海空齐发 “智能杀人” 限制协议困难重重](/articles/voa/1014887.md)
@@ -596,8 +600,4 @@
 6-2 [印度大选落幕 莫迪有望连任](/articles/voa/1015182.md)
 
 6-2 [朝鲜再向韩国各地投放更多“垃圾气球” 韩美同批有违《停战协定》](/articles/voa/1015183.md)
-
-6-2 [中国防长猛烈抨击“台独分子” 称解放军将强力阻止台湾独立](/articles/voa/1015184.md)
-
-6-2 [肯尼亚国家培训机构设立中国图书角](/articles/voa/1015185.md)
 
