--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+6-13 [拒绝执行欧盟难民政策 匈牙利被罚重金](/articles/dw/1025239.md)
+
+6-13 [“魔鬼辣”会导致急性中毒 丹麦召回韩国爆辣火鸡面](/articles/dw/1025240.md)
+
+6-13 [美国会通过法案 质疑“西藏自古以来属于中国”](/articles/dw/1025241.md)
+
 6-13 [欧盟对华汽车关税：征多少？怎么征？](/articles/dw/1025242.md)
 
 6-13 [长平观察：地球照常升起](/articles/dw/1025243.md)
@@ -594,10 +600,4 @@
 5-17 [斯洛伐克遇刺总理菲佐仍未脱离生命危险](/articles/dw/1025537.md)
 
 5-17 [以色列抗议者破坏加沙救援物资](/articles/dw/1025538.md)
-
-5-17 [中國保密法劃「紅線」 兩岸學術交流風險增](/articles/dw/1025539.md)
-
-5-17 [客座評論：禁制願榮光與經貿辦間諜案](/articles/dw/1025540.md)
-
-5-16 [客座评论：习普会面面临的两大棘手问题](/articles/dw/1025541.md)
 
