--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-14 [博明：台湾应建构强大威慑吓阻 拒中国于海峡“护城河”之外](/articles/voa/1014881.md)
+
+6-14 [加沙停火谈判各方努力为达成停火探寻“向前”路径](/articles/voa/1014882.md)
+
+6-14 [市场担忧中国报复，欧洲车厂股票周四持续下滑，中国电动车厂商逆势反升](/articles/voa/1014883.md)
+
 6-13 [中国暗示将对欧盟乳制品及猪肉进行反补贴及反倾销调查](/articles/voa/1014884.md)
 
 6-13 [赖清德接受《时代》周刊采访：北京应正视中华民国的存在，互不隶属是事实陈述](/articles/voa/1014885.md)
@@ -594,10 +600,4 @@
 6-2 [澳日军方在“香格里拉对话”期间与中国举行会谈 强调对话的重要性](/articles/voa/1015179.md)
 
 6-2 [中国和阿联酋联合声明 将开展军事经验交流](/articles/voa/1015180.md)
-
-6-2 [泰国即将实现同性婚姻合法化 LGBTQ+展开“骄傲月”游行](/articles/voa/1015181.md)
-
-6-2 [印度大选落幕 莫迪有望连任](/articles/voa/1015182.md)
-
-6-2 [朝鲜再向韩国各地投放更多“垃圾气球” 韩美同批有违《停战协定》](/articles/voa/1015183.md)
 
