--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-14 [美国在G7峰会宣布将使用被冻结俄资产利息为乌克兰预支500亿美元](/articles/voa/1014875.md)
+
+6-14 [北约秘书长：乌克兰有权利打击俄境内军事目标](/articles/voa/1014876.md)
+
 6-14 [美议员推出法案，要求国家情报总监制定公开报告，披露习近平等中共成员的腐败](/articles/voa/1014877.md)
 
 6-14 [香港采购经理指数再下跌 各行业东主皆叫苦连天](/articles/voa/1014878.md)
@@ -596,8 +600,4 @@
 6-3 [伊朗外交部就海湾岛屿问题召见中国驻德黑兰大使](/articles/voa/1015173.md)
 
 6-3 [美国预计，如果哈马斯接受，以色列将同意停战计划](/articles/voa/1015174.md)
-
-6-3 [韩国与非洲多边峰会在即，尹锡悦聚焦非洲关键矿物质及贸易](/articles/voa/1015175.md)
-
-6-2 [台湾驳斥中国防长对台威胁，指责北京缺乏与台湾政府对话的自信](/articles/voa/1015176.md)
 
