--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-14 [耶伦：中国的贸易政策可能会“严重干扰”与美国双边关系](/articles/voa/1014873.md)
+
 6-14 [泽连斯基：习近平对他承诺中国不会向俄罗斯出售任何武器](/articles/voa/1014874.md)
 
 6-14 [美国在G7峰会宣布将使用被冻结俄资产利息为乌克兰预支500亿美元](/articles/voa/1014875.md)
@@ -598,6 +600,4 @@
 6-3 [香格里拉对话会落幕：中国把对话会当成“权力游戏”？ 菲律宾总统划“红线”](/articles/voa/1015171.md)
 
 6-3 [俄罗斯攻击能源网后，乌克兰实行紧急断电](/articles/voa/1015172.md)
-
-6-3 [伊朗外交部就海湾岛屿问题召见中国驻德黑兰大使](/articles/voa/1015173.md)
 
