--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-14 [USCC听证：中国正在为攻打台湾进行全方位备战](/articles/voa/1014871.md)
+
+6-14 [G7同意拜登提出的用被冻俄资产利息向乌克兰提供500亿美元贷款计划](/articles/voa/1014872.md)
+
 6-14 [耶伦：中国的贸易政策可能会“严重干扰”与美国双边关系](/articles/voa/1014873.md)
 
 6-14 [泽连斯基：习近平对他承诺中国不会向俄罗斯出售任何武器](/articles/voa/1014874.md)
@@ -596,8 +600,4 @@
 6-3 [内塔尼亚胡的助手称 以色列会接受拜登“有缺陷的加沙方案”](/articles/voa/1015169.md)
 
 6-3 [林培瑞：我们为什么记住六四?](/articles/voa/1015170.md)
-
-6-3 [香格里拉对话会落幕：中国把对话会当成“权力游戏”？ 菲律宾总统划“红线”](/articles/voa/1015171.md)
-
-6-3 [俄罗斯攻击能源网后，乌克兰实行紧急断电](/articles/voa/1015172.md)
 
