--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-14 [中国的无人驾驶汽车安全吗？我试乘了几辆](/articles/nyt/1042679.md)
+
 6-13 [中国，全球最大的无人驾驶试验场](/articles/nyt/1042680.md)
 
 6-13 [美国宣布新金融制裁措施，旨在切断中俄技术联系](/articles/nyt/1042681.md)
@@ -598,6 +600,4 @@
 3-7 [黑利退出共和党初选，拜登特朗普对决正式开启](/articles/nyt/1042977.md)
 
 3-7 [中国“走线客”涌入纽约唐人街](/articles/nyt/1042978.md)
-
-3-6 [马尔代夫为何成为中印“必争“之地](/articles/nyt/1042979.md)
 
