--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-14 [美国会议员就微软在华业务质询该公司总裁](/articles/nyt/1042678.md)
+
 6-14 [中国的无人驾驶汽车安全吗？我试乘了几辆](/articles/nyt/1042679.md)
 
 6-13 [中国，全球最大的无人驾驶试验场](/articles/nyt/1042680.md)
@@ -598,6 +600,4 @@
 3-7 [前谷歌工程师被控为中国公司窃取AI技术](/articles/nyt/1042976.md)
 
 3-7 [黑利退出共和党初选，拜登特朗普对决正式开启](/articles/nyt/1042977.md)
-
-3-7 [中国“走线客”涌入纽约唐人街](/articles/nyt/1042978.md)
 
