--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-14 [杯葛瑞士和平峰會？傳中國私下力推北京方案](/articles/dw/1025238.md)
+
 6-13 [拒绝执行欧盟难民政策 匈牙利被罚重金](/articles/dw/1025239.md)
 
 6-13 [“魔鬼辣”会导致急性中毒 丹麦召回韩国爆辣火鸡面](/articles/dw/1025240.md)
@@ -598,6 +600,4 @@
 5-17 [选项党欧洲议员克拉是否收了中国的钱？](/articles/dw/1025536.md)
 
 5-17 [斯洛伐克遇刺总理菲佐仍未脱离生命危险](/articles/dw/1025537.md)
-
-5-17 [以色列抗议者破坏加沙救援物资](/articles/dw/1025538.md)
 
