--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-14 [七国集团瞄准小型中国银行，打击俄罗斯战争经济](/articles/voa/1014869.md)
+
 6-14 [流亡维吾尔记者：前同事们在乌鲁木齐被监禁似乎与其报道工作有关](/articles/voa/1014870.md)
 
 6-14 [USCC听证：中国正在为攻打台湾进行全方位备战](/articles/voa/1014871.md)
@@ -598,6 +600,4 @@
 6-3 [中国批评美国在南中国海扮演了“极其不光彩的角色”](/articles/voa/1015167.md)
 
 6-3 [墨西哥举行大选 将产生首位女总统](/articles/voa/1015168.md)
-
-6-3 [内塔尼亚胡的助手称 以色列会接受拜登“有缺陷的加沙方案”](/articles/voa/1015169.md)
 
