--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-14 [加拿大籍中国居民就窃取特斯拉电池技术认罪，同案中国被告仍在逃](/articles/voa/1014867.md)
+
+6-14 [普京访朝前 美韩紧急通话并警告朝俄不应在违反安理会的决议下进一步发展军事关系](/articles/voa/1014868.md)
+
 6-14 [七国集团瞄准小型中国银行，打击俄罗斯战争经济](/articles/voa/1014869.md)
 
 6-14 [流亡维吾尔记者：前同事们在乌鲁木齐被监禁似乎与其报道工作有关](/articles/voa/1014870.md)
@@ -596,8 +600,4 @@
 6-3 [美日韩防长聚会推进“制度化”国防合作](/articles/voa/1015165.md)
 
 6-3 [北京指责英国情报机构策反中国公务员夫妇](/articles/voa/1015166.md)
-
-6-3 [中国批评美国在南中国海扮演了“极其不光彩的角色”](/articles/voa/1015167.md)
-
-6-3 [墨西哥举行大选 将产生首位女总统](/articles/voa/1015168.md)
 
