--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -17,6 +17,8 @@
 
 6-13 [六神磊磊读金庸｜端午快乐：一个被营销号涂改掉了的全民记忆](/articles/cdt/339693.md)
 
+6-14 [【404文库】“新科技向用户敞开大门，我们却与世界从此分道扬镳”（外二篇）](/articles/cdt/339696.md)
+
 6-12 [古村之友｜汤敏：中华儿慈会犯罪事件彻底宣告了现行社会组织制度的全面破产](/articles/cdt/339699.md)
 
 6-12 [极目新闻｜吉林银行回应“取款需派出所同意”：系防范电诈](/articles/cdt/339701.md)
@@ -598,6 +600,4 @@
 5-10 [有马体育｜李彦宏甩锅](/articles/cdt/340845.md)
 
 5-10 [【404文库】卖杏花｜谁制造了璩静？](/articles/cdt/340847.md)
-
-5-10 [每日经济新闻｜城市有轨电车之困：一边争相上马，一边接连叫停](/articles/cdt/340865.md)
 
