--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-14 [【CDT报告汇】专家：越战、伊战和对华政策是二战后美国外交的三大失败（外二篇）](/articles/cdt/339676.md)
+
 6-13 [木蹊说｜黄仁勋有奶便是娘](/articles/cdt/339679.md)
 
 6-13 [人物｜一次罕见的胜利](/articles/cdt/339681.md)
@@ -598,6 +600,4 @@
 5-12 [【CDT周报】第169期：一个展示了百度管理文化的人，难道不代表最真实的百度？](/articles/cdt/340843.md)
 
 5-10 [有马体育｜李彦宏甩锅](/articles/cdt/340845.md)
-
-5-10 [【404文库】卖杏花｜谁制造了璩静？](/articles/cdt/340847.md)
 
