--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-14 [美在台协会处长孙晓雅：美将尽速交付军售武器](/articles/voa/1014860.md)
+
+6-14 [七国集团领导人警告伊朗不要推进其铀浓缩计划及向俄罗斯提供弹道导弹](/articles/voa/1014861.md)
+
+6-14 [美国在台最高外交官孙晓雅离任前警告北京：挑衅可能引发更大的冲突](/articles/voa/1014862.md)
+
 6-14 [中国公民记者黄雪琴因“颠覆罪”被判处五年有期徒刑](/articles/voa/1014863.md)
 
 6-14 [李强继续访问新西兰 大力宣传与中国做生意的机会](/articles/voa/1014864.md)
@@ -594,10 +600,4 @@
 6-3 [莫迪如胜选，将出台改革措施让印度制造业赶超中国](/articles/voa/1015158.md)
 
 6-3 [中国电商巨头希音筹划伦敦上市，英国工党证实与希音（Shein）会面](/articles/voa/1015159.md)
-
-6-3 [泽连斯基突访马尼拉 感谢菲律宾出席乌克兰和平峰会](/articles/voa/1015160.md)
-
-6-3 [聿文视界：35年了，海外反对运动如何从六四吸取精神资源](/articles/voa/1015161.md)
-
-6-3 [六四下一代 “坎坷但无悔”的真实版《美丽人生》](/articles/voa/1015162.md)
 
