--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-14 [黄雪琴王建兵凝聚公民社会，被控 “煽颠”罪被判刑](/articles/voa/1014858.md)
+
+6-14 [中俄暗中拆台奏效？确定参加瑞士乌克兰全球和平峰会的国家减少](/articles/voa/1014859.md)
+
 6-14 [美在台协会处长孙晓雅：美将尽速交付军售武器](/articles/voa/1014860.md)
 
 6-14 [七国集团领导人警告伊朗不要推进其铀浓缩计划及向俄罗斯提供弹道导弹](/articles/voa/1014861.md)
@@ -596,8 +600,4 @@
 6-4 [加州自由雕塑公园再现“六四”前夜场景 组织者：保留记忆，一代一代，最终推翻共产集权](/articles/voa/1015156.md)
 
 6-3 [六四35周年前夕，人权观察谴责中共当局封堵一切纪念活动，抹杀六四记忆](/articles/voa/1015157.md)
-
-6-3 [莫迪如胜选，将出台改革措施让印度制造业赶超中国](/articles/voa/1015158.md)
-
-6-3 [中国电商巨头希音筹划伦敦上市，英国工党证实与希音（Shein）会面](/articles/voa/1015159.md)
 
