--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-15 [大西洋理事会报告：中国向发展中国家大力推介和输出中国专制模式](/articles/voa/1014855.md)
+
+6-15 [普京：要停火先要基辅割地、非核与中立、西方取消制裁，乌克兰：“荒唐”](/articles/voa/1014856.md)
+
 6-14 [中国海警新规即将生效，菲国民众到中国使领馆抗议示威](/articles/voa/1014857.md)
 
 6-14 [黄雪琴王建兵凝聚公民社会，被控 “煽颠”罪被判刑](/articles/voa/1014858.md)
@@ -596,8 +600,4 @@
 6-4 [六四在香港几成禁语，香港高官避而不谈](/articles/voa/1015153.md)
 
 6-4 [俄中联手拆台瑞士国际和平峰会，外界对峰会有何预期？](/articles/voa/1015154.md)
-
-6-4 [台湾陆委会在六四前夕呼吁北京面对历史尊重民主](/articles/voa/1015155.md)
-
-6-4 [加州自由雕塑公园再现“六四”前夜场景 组织者：保留记忆，一代一代，最终推翻共产集权](/articles/voa/1015156.md)
 
