--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-15 [每日一语 2024.6.13](/articles/cdt/339665.md)
+
+6-15 [建设性意见｜准备去广州地铁投个广告，普及点没人敢说的基本常识](/articles/cdt/339667.md)
+
 6-14 [【CDT报告汇】专家：越战、伊战和对华政策是二战后美国外交的三大失败（外二篇）](/articles/cdt/339676.md)
 
 6-13 [木蹊说｜黄仁勋有奶便是娘](/articles/cdt/339679.md)
@@ -596,8 +600,4 @@
 5-11 [【404文库】川江物语｜公然推广海参崴阅兵游，这样好吗](/articles/cdt/340837.md)
 
 5-11 [每日一语 2024.5.9](/articles/cdt/340842.md)
-
-5-12 [【CDT周报】第169期：一个展示了百度管理文化的人，难道不代表最真实的百度？](/articles/cdt/340843.md)
-
-5-10 [有马体育｜李彦宏甩锅](/articles/cdt/340845.md)
 
