--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-15 [美国制裁阻拦救援物资进入加沙的以色列团体](/articles/voa/1014853.md)
+
 6-15 [中国拟报复欧盟加征电动车关税 分析: 象征意义大于实质](/articles/voa/1014854.md)
 
 6-15 [大西洋理事会报告：中国向发展中国家大力推介和输出中国专制模式](/articles/voa/1014855.md)
@@ -598,6 +600,4 @@
 6-4 [辛鲍姆胜选成为墨西哥史上首位女总统，拜登表示祝贺](/articles/voa/1015151.md)
 
 6-4 [香港当局在六四事件35周年前夕拘留一名艺术家](/articles/voa/1015152.md)
-
-6-4 [六四在香港几成禁语，香港高官避而不谈](/articles/voa/1015153.md)
 
