--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,16 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-15 [风声OPINION｜强制统一门店招牌的城市，不如学学广州地铁允许投放个人广告](/articles/cdt/339654.md)
+
+6-15 [三联生活周刊｜985、211毕业生“反向升学”读技校，找到更高薪的工作了吗？](/articles/cdt/339657.md)
+
+6-15 [菏东诗吼｜当15%的失业率遇上1179万毕业生](/articles/cdt/339659.md)
+
+6-15 [徐潜川｜是时候构建我们自己的公众人物原则了](/articles/cdt/339661.md)
+
+6-15 [【重温】全媒派｜发声本身就是一种力量：专访《中国女记者性骚扰调查》发起者黄雪琴](/articles/cdt/339663.md)
+
 6-15 [每日一语 2024.6.13](/articles/cdt/339665.md)
 
 6-15 [建设性意见｜准备去广州地铁投个广告，普及点没人敢说的基本常识](/articles/cdt/339667.md)
@@ -590,14 +600,4 @@
 5-11 [【404文库】财新特稿｜梅大高速悲剧](/articles/cdt/340816.md)
 
 5-11 [每日一语 2024.5.10](/articles/cdt/340820.md)
-
-5-11 [导筒directube｜戛纳主竞赛导演被判八年监禁、鞭刑并没收财产，理由为制作电影危害国家安全](/articles/cdt/340823.md)
-
-5-11 [关胖本胖｜高铁突然涨价，专家们想要的通胀来了……](/articles/cdt/340827.md)
-
-5-11 [追月数星｜上游新闻被删稿：阜阳多方回应“水泥墩封人”三大疑问](/articles/cdt/340834.md)
-
-5-11 [【404文库】川江物语｜公然推广海参崴阅兵游，这样好吗](/articles/cdt/340837.md)
-
-5-11 [每日一语 2024.5.9](/articles/cdt/340842.md)
 
