--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-15 [中国正在向世界输出其政治模式吗？一份新报告给出了肯定的答案](/articles/voa/1014848.md)
+
 6-15 [美众院通过年度国防授权法案，继续投入资源遏阻中国](/articles/voa/1014849.md)
 
 6-15 [美国、基辅与北约盟国抨击普京提出的乌克兰停火条件](/articles/voa/1014850.md)
@@ -598,6 +600,4 @@
 6-4 [亨特·拜登联邦枪支案陪审员挑选完毕](/articles/voa/1015146.md)
 
 6-4 [报道：拜登准备发布行政令，若南部边境每日移民人数达2500，便停止受理庇护申请](/articles/voa/1015147.md)
-
-6-4 [中国多家网站六四前夕再次禁止更换头像，年轻用户以为是为高考做准备](/articles/voa/1015148.md)
 
