--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-15 [海涛评论｜派出所有点烦，村支书有点扯](/articles/cdt/339649.md)
+
+6-15 [不器是一种态度｜有这么一个男孩，他敢为了真理去面对一些事](/articles/cdt/339651.md)
+
 6-15 [风声OPINION｜强制统一门店招牌的城市，不如学学广州地铁允许投放个人广告](/articles/cdt/339654.md)
 
 6-15 [三联生活周刊｜985、211毕业生“反向升学”读技校，找到更高薪的工作了吗？](/articles/cdt/339657.md)
@@ -596,8 +600,4 @@
 5-11 [LoveMattersPRO｜情况比预想的严峻，小红书删除“独立女性”和“女权主义”标签](/articles/cdt/340806.md)
 
 5-11 [维舟｜“学生这点自由都没有了？”](/articles/cdt/340808.md)
-
-5-11 [【404文库】财新特稿｜梅大高速悲剧](/articles/cdt/340816.md)
-
-5-11 [每日一语 2024.5.10](/articles/cdt/340820.md)
 
