--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-15 [黄雪琴王建兵被判刑 观察: 北京借此打压年轻维权人士难奏效](/articles/voa/1014846.md)
+
+6-15 [最高法院推翻特朗普时代对拉斯维加斯枪击案中使用的撞火枪托的禁令](/articles/voa/1014847.md)
+
 6-15 [中国正在向世界输出其政治模式吗？一份新报告给出了肯定的答案](/articles/voa/1014848.md)
 
 6-15 [美众院通过年度国防授权法案，继续投入资源遏阻中国](/articles/voa/1014849.md)
@@ -596,8 +600,4 @@
 6-4 [伊朗外长证实与美国谈判](/articles/voa/1015144.md)
 
 6-4 [内塔尼亚胡淡化加沙立即停火的前景](/articles/voa/1015145.md)
-
-6-4 [亨特·拜登联邦枪支案陪审员挑选完毕](/articles/voa/1015146.md)
-
-6-4 [报道：拜登准备发布行政令，若南部边境每日移民人数达2500，便停止受理庇护申请](/articles/voa/1015147.md)
 
