--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-15 [时代乡贤v｜事关国运，林毅夫老师的三次预测！](/articles/cdt/339646.md)
+
 6-15 [海涛评论｜派出所有点烦，村支书有点扯](/articles/cdt/339649.md)
 
 6-15 [不器是一种态度｜有这么一个男孩，他敢为了真理去面对一些事](/articles/cdt/339651.md)
@@ -598,6 +600,4 @@
 5-11 [旧闻评论｜假如广州水费涨价发生在2009年……](/articles/cdt/340804.md)
 
 5-11 [LoveMattersPRO｜情况比预想的严峻，小红书删除“独立女性”和“女权主义”标签](/articles/cdt/340806.md)
-
-5-11 [维舟｜“学生这点自由都没有了？”](/articles/cdt/340808.md)
 
