--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-15 [美国产业团体寻求听证会 要求对拜登调高中国关税进行更多讨论](/articles/voa/1014843.md)
+
 6-15 [中国在拉美数字影响力不断增长之际，世界各国领导人讨论人工智能](/articles/voa/1014844.md)
 
 6-15 [七国集团领导人以警告中国和承诺管理人工智能结束峰会](/articles/voa/1014845.md)
@@ -598,6 +600,4 @@
 6-4 [备受争议的中国公司将承建格鲁吉亚黑海大型项目](/articles/voa/1015141.md)
 
 6-4 [美传染病专家弗契在众议院新冠疫情听证会上应对共和党议员的抨击](/articles/voa/1015142.md)
-
-6-4 [联合国安理会将讨论朝鲜人权问题](/articles/voa/1015143.md)
 
