--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-15 [连日暴雨令德国南部洪涝成灾](/articles/dw/1025225.md)
+
+6-15 [乌克兰和平峰会在瑞士举行：和平希望渺茫](/articles/dw/1025226.md)
+
 6-14 [教宗会见百名喜剧界人士 赞许幽默](/articles/dw/1025227.md)
 
 6-14 [普京公布和谈条件 乌克兰北约同拒绝](/articles/dw/1025228.md)
@@ -596,8 +600,4 @@
 5-19 [菲律宾民间船队驶向黄岩岛宣示主权](/articles/dw/1025523.md)
 
 5-18 [普京结束访华 美台如此评价](/articles/dw/1025524.md)
-
-5-18 [美驻日大使访与那国岛 强调威慑力重要性](/articles/dw/1025525.md)
-
-5-18 [朝鲜试射自动导航系统弹道导弹](/articles/dw/1025526.md)
 
