--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-15 [欧洲杯拉开帷幕 德国队迎来“开门红”](/articles/dw/1025223.md)
+
+6-15 [德国企业第一季度破产数量激增](/articles/dw/1025224.md)
+
 6-15 [连日暴雨令德国南部洪涝成灾](/articles/dw/1025225.md)
 
 6-15 [乌克兰和平峰会在瑞士举行：和平希望渺茫](/articles/dw/1025226.md)
@@ -596,8 +600,4 @@
 5-19 [欧洲议会选举：德国16岁年轻人也可以投票啦！](/articles/dw/1025521.md)
 
 5-19 [非法芬太尼正以前所未有的速度进入美国](/articles/dw/1025522.md)
-
-5-19 [菲律宾民间船队驶向黄岩岛宣示主权](/articles/dw/1025523.md)
-
-5-18 [普京结束访华 美台如此评价](/articles/dw/1025524.md)
 
