--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-15 [中国海警争议新规生效 G7指责北京恐吓胁迫活动](/articles/voa/1014838.md)
+
 6-15 [世界领导人参与乌克兰峰会 中国缺席并称逾百个国家积极回应其替代方案](/articles/voa/1014839.md)
 
 6-15 [中国消费者对新西兰食品业需求增长 李强参观新西兰乳业巨头恒天然](/articles/voa/1014840.md)
@@ -598,6 +600,4 @@
 6-4 [台湾新总统发表六四纪念感言，中国大陆和香港收紧安全警戒](/articles/voa/1015136.md)
 
 6-4 [南中国海局势持续紧张 菲律宾称军人握紧武器但否认瞄准中国海警](/articles/voa/1015137.md)
-
-6-4 [六四天安门大屠杀35周年，美国国会资深议员表达对民主的支持](/articles/voa/1015138.md)
 
