--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-15 [泽连斯基：乌克兰和平峰会将见证历史产生](/articles/dw/1025219.md)
+
 6-15 [中国海警新规生效 可拘“非法入境”外国人](/articles/dw/1025220.md)
 
 6-15 [中国泳队药检丑闻再发酵 反兴奋剂组织回应遭批评](/articles/dw/1025221.md)
@@ -598,6 +600,4 @@
 5-19 [中俄关系：真朋友还是权宜合作？](/articles/dw/1025517.md)
 
 5-19 [中国对欧美日台的化工产品启动反倾销调查](/articles/dw/1025518.md)
-
-5-19 [更多欧盟国家愿意承认巴勒斯坦国 原因几何？](/articles/dw/1025519.md)
 
