--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-15 [中国“80后”，退休还有养老金吗？](/articles/voa/1014836.md)
+
+6-15 [黄埔建军百年 中共如何透过改造国军墓碑重构历史？](/articles/voa/1014837.md)
+
 6-15 [中国海警争议新规生效 G7指责北京恐吓胁迫活动](/articles/voa/1014838.md)
 
 6-15 [世界领导人参与乌克兰峰会 中国缺席并称逾百个国家积极回应其替代方案](/articles/voa/1014839.md)
@@ -596,8 +600,4 @@
 6-4 [印度大选初步计票显示莫迪执政联盟预期取得多数席次](/articles/voa/1015134.md)
 
 6-4 [忧心中国扩张 美防长访问金边盼重塑美柬关系](/articles/voa/1015135.md)
-
-6-4 [台湾新总统发表六四纪念感言，中国大陆和香港收紧安全警戒](/articles/voa/1015136.md)
-
-6-4 [南中国海局势持续紧张 菲律宾称军人握紧武器但否认瞄准中国海警](/articles/voa/1015137.md)
 
