--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-15 [分析：G7公报反映对中国的共同关切，是措辞和行动上的重大升级，但不会使中国改变做法](/articles/voa/1014833.md)
+
+6-15 [菲律宾向联合国递交申请，要求将其南中国海大陆架延申至350海里](/articles/voa/1014834.md)
+
+6-15 [专访前白宫副国安顾问博明：习近平正在备战 中国人民是我们最好的盟友](/articles/voa/1014835.md)
+
 6-15 [中国“80后”，退休还有养老金吗？](/articles/voa/1014836.md)
 
 6-15 [黄埔建军百年 中共如何透过改造国军墓碑重构历史？](/articles/voa/1014837.md)
@@ -594,10 +600,4 @@
 6-4 [朝鲜垃圾气球入侵后，韩国恢复韩朝边境军事活动](/articles/voa/1015131.md)
 
 6-4 [35年后，台湾谁在纪念六四？](/articles/voa/1015132.md)
-
-6-4 [八九学运35周年 外地学生当年的六四](/articles/voa/1015133.md)
-
-6-4 [印度大选初步计票显示莫迪执政联盟预期取得多数席次](/articles/voa/1015134.md)
-
-6-4 [忧心中国扩张 美防长访问金边盼重塑美柬关系](/articles/voa/1015135.md)
 
