--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 6-15 [维舟｜低生育率是社会总危机](/articles/cdt/339624.md)
 
+6-15 [【CDT报告汇·六四35周年】大声专访吴仁华（五）：寒冬游水偷渡澳门 香港的黄雀行动 ｜说温州话才找到蛇头｜感谢香港各界的六四捐助 ｜赵紫阳的女婿有情有义](/articles/cdt/339626.md)
+
 6-15 [往事与随想｜“偏科”应是常态，“不偏科”才不正常](/articles/cdt/339627.md)
 
 6-15 [【立此存照】早在疫情之前习近平就提出“动态清零”了？](/articles/cdt/339635.md)
@@ -598,6 +600,4 @@
 5-13 [建设性意见｜我代表自己同意广州自来水涨价，但是得先谈条件](/articles/cdt/340783.md)
 
 5-12 [每日一语 2024.5.11](/articles/cdt/340791.md)
-
-5-12 [青年志Youthology｜当一位女性决定反击性骚扰](/articles/cdt/340793.md)
 
