--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-15 [李强访澳呼吁搁置分歧 专家:以维护澳国家利益为原则](/articles/voa/1014832.md)
+
 6-15 [分析：G7公报反映对中国的共同关切，是措辞和行动上的重大升级，但不会使中国改变做法](/articles/voa/1014833.md)
 
 6-15 [菲律宾向联合国递交申请，要求将其南中国海大陆架延申至350海里](/articles/voa/1014834.md)
@@ -598,6 +600,4 @@
 6-4 [六四纪念日中港气氛紧张，专家：国际社会对中国的不安情绪比天安门事件之后更加广泛](/articles/voa/1015130.md)
 
 6-4 [朝鲜垃圾气球入侵后，韩国恢复韩朝边境军事活动](/articles/voa/1015131.md)
-
-6-4 [35年后，台湾谁在纪念六四？](/articles/voa/1015132.md)
 
