--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-16 [紧张关系不断升级—中国20多年对菲投资未奏效 北京“以商逼政”或适得其反](/articles/voa/1014828.md)
+
+6-16 [各国领导人现身乌克兰国际峰会，哈里斯副总统宣布向基辅提供15亿美元新援助](/articles/voa/1014829.md)
+
 6-16 [欧盟挥关税重拳，中国电动车三巨头应战：比亚迪为何沉默？](/articles/voa/1014830.md)
 
 6-15 [以军在加沙战场使用人工智能技术惹争议，专家称或有利减少平民伤亡](/articles/voa/1014831.md)
@@ -596,8 +600,4 @@
 6-5 [维吾尔一周新闻回顾：5月27日-6月3日](/articles/voa/1015126.md)
 
 6-5 [微软：俄罗斯加剧针对巴黎奥运虚假信息攻势](/articles/voa/1015127.md)
-
-6-5 [拜登签署行政命令，以熔断机制阻止美墨边境移民大量涌入](/articles/voa/1015128.md)
-
-6-4 [在某个“敏感日子”里，美英等西方国家驻港机构以各种方式纪念六四](/articles/voa/1015129.md)
 
