--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-16 [拉法战斗继续进行，八名以色列军人阵亡](/articles/voa/1014827.md)
+
 6-16 [紧张关系不断升级—中国20多年对菲投资未奏效 北京“以商逼政”或适得其反](/articles/voa/1014828.md)
 
 6-16 [各国领导人现身乌克兰国际峰会，哈里斯副总统宣布向基辅提供15亿美元新援助](/articles/voa/1014829.md)
@@ -598,6 +600,4 @@
 6-5 [两岸关系恶化导致台积电将工厂迁出台湾？董事长魏哲家：不可能](/articles/voa/1015125.md)
 
 6-5 [维吾尔一周新闻回顾：5月27日-6月3日](/articles/voa/1015126.md)
-
-6-5 [微软：俄罗斯加剧针对巴黎奥运虚假信息攻势](/articles/voa/1015127.md)
 
