--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-16 [瑞典说，俄罗斯军机侵犯瑞典领空](/articles/voa/1014826.md)
+
 6-16 [拉法战斗继续进行，八名以色列军人阵亡](/articles/voa/1014827.md)
 
 6-16 [紧张关系不断升级—中国20多年对菲投资未奏效 北京“以商逼政”或适得其反](/articles/voa/1014828.md)
@@ -598,6 +600,4 @@
 6-5 [台北六四35周年烛光晚会 逾6000人出席创新高](/articles/voa/1015124.md)
 
 6-5 [两岸关系恶化导致台积电将工厂迁出台湾？董事长魏哲家：不可能](/articles/voa/1015125.md)
-
-6-5 [维吾尔一周新闻回顾：5月27日-6月3日](/articles/voa/1015126.md)
 
