--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-16 [建设性意见｜港澳通行证为什么还没取消？](/articles/cdt/339610.md)
+
 6-16 [【CDT专访】美国学者林培瑞谈刘晓波：中国抗争的星火不灭](/articles/cdt/339612.md)
 
 6-15 [维舟｜低生育率是社会总危机](/articles/cdt/339624.md)
@@ -598,6 +600,4 @@
 5-13 [每日一语 2024.5.12](/articles/cdt/340780.md)
 
 5-13 [澎湃人物｜梅大高速涉事边坡：脆弱地带与养护之困](/articles/cdt/340782.md)
-
-5-13 [建设性意见｜我代表自己同意广州自来水涨价，但是得先谈条件](/articles/cdt/340783.md)
 
