--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,16 @@
 德国之声
 ------
 
+6-16 [科索沃战争结束25周年](/articles/dw/1025208.md)
+
+6-16 [解码中国：是否会与欧盟爆发贸易战？](/articles/dw/1025209.md)
+
+6-16 [2024欧洲杯广告赞助 被中国大包大揽](/articles/dw/1025210.md)
+
+6-16 [德国1/4年轻人住“妈妈酒店” 儿子更“恋家”](/articles/dw/1025211.md)
+
+6-16 [2024欧洲杯：德国球迷开始嗨了](/articles/dw/1025212.md)
+
 6-15 [时隔七年再访澳 中国总理称中澳关系重回正轨](/articles/dw/1025213.md)
 
 6-15 [时隔七年再访澳 李强称中澳关系重回正轨](/articles/dw/1025214.md)
@@ -590,14 +600,4 @@
 5-20 [泽连斯基为何得以留任乌克兰总统？](/articles/dw/1025506.md)
 
 5-20 [伊朗总统莱希空难 各方反响如何](/articles/dw/1025507.md)
-
-5-20 [拜登现身毕业典礼 直面回应抗议浪潮](/articles/dw/1025508.md)
-
-5-20 [矿工的儿子 中国的眼中钉：赖清德其人](/articles/dw/1025509.md)
-
-5-20 [排華暴亂26年後：印尼Z世代華人如何記憶？](/articles/dw/1025510.md)
-
-5-20 [解码中国：北京与莫斯科肩并肩](/articles/dw/1025511.md)
-
-5-20 [官方證實伊朗總統萊希墜機死亡](/articles/dw/1025512.md)
 
