--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-16 [李强访澳表示将延续熊猫外交 并访问葡萄酒产区象征澳中贸易关系好转](/articles/voa/1014821.md)
+
+6-16 [2024首场美国总统辩论将登场 拜登、特朗普团队同意麦克风静音规则](/articles/voa/1014822.md)
+
 6-16 [一个月球，两个阵营，美中地缘政治竞争延伸到月球](/articles/voa/1014823.md)
 
 6-16 [中国总理李强抵达澳大利亚，表示关系“重回正轨”](/articles/voa/1014824.md)
@@ -596,8 +600,4 @@
 6-5 [联合国人权办公室谴责以色列在西岸地区的行动](/articles/voa/1015119.md)
 
 6-5 [美国国防部长会见柬埔寨高级官员](/articles/voa/1015120.md)
-
-6-5 [《苹果日报》创办人黎智英国安审判周一因健康问题而暂停](/articles/voa/1015121.md)
-
-6-5 [六四35周年港警维园一带严防 学者指禁不住悼念烛光遍全球](/articles/voa/1015122.md)
 
