--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,18 @@
 德国之声
 ------
 
+6-16 [事实核查：俄舰队到访古巴和美部署海军作为回应的假视频](/articles/dw/1025202.md)
+
+6-16 [德国职场众生相：满意度降低 压力感增强](/articles/dw/1025203.md)
+
+6-16 [俄罗斯科学家入境美国的难度日益增高](/articles/dw/1025204.md)
+
+6-16 [日本汽车爆安全测试丑闻，新版“柴油门”？](/articles/dw/1025205.md)
+
+6-16 [俄罗斯军舰抵达古巴参加军演](/articles/dw/1025206.md)
+
+6-16 [反修例運動五年後 香港歷經多少巨變？](/articles/dw/1025207.md)
+
 6-16 [科索沃战争结束25周年](/articles/dw/1025208.md)
 
 6-16 [解码中国：是否会与欧盟爆发贸易战？](/articles/dw/1025209.md)
@@ -588,16 +600,4 @@
 5-21 [ICC申請逮捕以哈領袖 拜登：不該劃上等號](/articles/dw/1025500.md)
 
 5-21 [客座評論：賴清德就職演講用ROC對上PRC](/articles/dw/1025501.md)
-
-5-20 [菲律宾敦促中国开放黄岩岛 允许国际监督](/articles/dw/1025502.md)
-
-5-20 [电竞男生去世受关注 警方通报调查结果](/articles/dw/1025503.md)
-
-5-20 [乌克兰战争推高全球军事预算 破历史纪录](/articles/dw/1025504.md)
-
-5-20 [蔡英文卸任台湾总统 拎两只爱猫搬离总统府](/articles/dw/1025505.md)
-
-5-20 [泽连斯基为何得以留任乌克兰总统？](/articles/dw/1025506.md)
-
-5-20 [伊朗总统莱希空难 各方反响如何](/articles/dw/1025507.md)
 
