--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-16 [台湾总统军校演说称 中国视“并吞与消灭台湾”为民族事业](/articles/voa/1014819.md)
+
+6-16 [法国新一届议会选举前 大规模游行反对极右翼](/articles/voa/1014820.md)
+
 6-16 [李强访澳表示将延续熊猫外交 并访问葡萄酒产区象征澳中贸易关系好转](/articles/voa/1014821.md)
 
 6-16 [2024首场美国总统辩论将登场 拜登、特朗普团队同意麦克风静音规则](/articles/voa/1014822.md)
@@ -596,8 +600,4 @@
 6-5 [拜登签署行政命令限制边境寻求庇护者，政治光谱左右两边皆表反对](/articles/voa/1015117.md)
 
 6-5 [拜登：“完全有理由”相信内塔尼亚胡拖延加沙战争以在政治上拯救自己](/articles/voa/1015118.md)
-
-6-5 [联合国人权办公室谴责以色列在西岸地区的行动](/articles/voa/1015119.md)
-
-6-5 [美国国防部长会见柬埔寨高级官员](/articles/voa/1015120.md)
 
