--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-16 [乌克兰和平峰会发表公报，80个国家签字支持乌克兰“领土完整”](/articles/voa/1014813.md)
+
+6-16 [“七一”临近，洛杉矶民主人士举办“中共百年暴行展” 助海外人士认清中共本质](/articles/voa/1014814.md)
+
 6-16 [阿迪达斯中国分公司高管被举报受贿，德国总公司对此正式展开调查](/articles/voa/1014815.md)
 
 6-16 [中共“隔离”台湾难达统一目标 分析：堪称“鸡肋”](/articles/voa/1014816.md)
@@ -596,8 +600,4 @@
 6-5 [美司法部长加兰德反驳共和党人声称他将刑事调查政治化的说法](/articles/voa/1015111.md)
 
 6-5 [菲律宾：中国在有争议海域抢走菲军空投物资](/articles/voa/1015112.md)
-
-6-5 [莫迪将赢得微弱多数，但印度人民党的席次减少](/articles/voa/1015113.md)
-
-6-5 [天安门事件35周年 美国会两党领袖回忆“坦克人”：自由之光将继续燃烧](/articles/voa/1015114.md)
 
