--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-17 [杨恒均的支持者说，在中国总理访澳前,北京法院维持对杨的原判](/articles/voa/1014811.md)
+
 6-17 [美国国会两党议员下周访问印度，并将会晤西藏流亡精神领袖达赖喇嘛](/articles/voa/1014812.md)
 
 6-16 [乌克兰和平峰会发表公报，80个国家签字支持乌克兰“领土完整”](/articles/voa/1014813.md)
@@ -598,6 +600,4 @@
 6-5 [拜登对他有关以色列总理拖延加沙战争的评论进行软化处理](/articles/voa/1015109.md)
 
 6-5 [天安门镇压35周年纪念日当天，中国和香港在沉默和高度戒备中度过](/articles/voa/1015110.md)
-
-6-5 [美司法部长加兰德反驳共和党人声称他将刑事调查政治化的说法](/articles/voa/1015111.md)
 
