--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-17 [武汉天喻说，被纳入美国制裁名单可能影响其外汇交易](/articles/voa/1014808.md)
+
+6-17 [乌克兰和平峰会虽然有了张凝聚和平力量的“全家福”，但实际成效有限？](/articles/voa/1014809.md)
+
 6-17 [中国南方暴雨连连，北方热浪滚滚降雨稀少](/articles/voa/1014810.md)
 
 6-17 [杨恒均的支持者说，在中国总理访澳前,北京法院维持对杨的原判](/articles/voa/1014811.md)
@@ -596,8 +600,4 @@
 6-5 [泽连斯基为何对中国态度大转向？](/articles/voa/1015106.md)
 
 6-5 [拜登再次表示没人愿意与习近平换位 中国经济正处于崩溃边缘](/articles/voa/1015107.md)
-
-6-5 [美防长旋风式访柬 或难撼动中柬铁杆友谊](/articles/voa/1015108.md)
-
-6-5 [拜登对他有关以色列总理拖延加沙战争的评论进行软化处理](/articles/voa/1015109.md)
 
