--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-17 [易富贤：再论中国制造业即将衰落](/articles/voa/1014806.md)
+
+6-17 [泰国采取下一步行动加入金砖国家集团](/articles/voa/1014807.md)
+
 6-17 [武汉天喻说，被纳入美国制裁名单可能影响其外汇交易](/articles/voa/1014808.md)
 
 6-17 [乌克兰和平峰会虽然有了张凝聚和平力量的“全家福”，但实际成效有限？](/articles/voa/1014809.md)
@@ -596,8 +600,4 @@
 6-5 [国家囚徒35载 墙内六四一代冷眼笑看“荒唐”中国](/articles/voa/1015104.md)
 
 6-5 [斯洛文尼亚成为最新一个承认巴勒斯坦国的欧盟国家](/articles/voa/1015105.md)
-
-6-5 [泽连斯基为何对中国态度大转向？](/articles/voa/1015106.md)
-
-6-5 [拜登再次表示没人愿意与习近平换位 中国经济正处于崩溃边缘](/articles/voa/1015107.md)
 
