--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-17 [G7公报28处提及中国：措辞强硬、凸显对抗性](/articles/nyt/1042674.md)
+
 6-17 [独立记者黄雪琴、活动人士王建兵因“煽颠罪”获刑](/articles/nyt/1042675.md)
 
 6-14 [雪崩、冰瀑和死亡阴影：在喜马拉雅，夏尔巴人用生命谋生](/articles/nyt/1042676.md)
@@ -598,6 +600,4 @@
 3-8 [中国是如何在太阳能领域称霸世界的](/articles/nyt/1042972.md)
 
 3-8 [拜登在国情咨文讲话中将如何提及中国？](/articles/nyt/1042973.md)
-
-3-7 [马航370失事十周年：我们距离真相还有多远](/articles/nyt/1042974.md)
 
