--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-17 [【CDT图集】在习近平新时代读物旁“恶意摆书”：《换届》、《小学生心理学漫画》](/articles/cdt/339584.md)
+
 6-17 [每日一语 2024.6.16](/articles/cdt/339590.md)
 
 6-17 [拆界艺术｜一场由家暴引发的社火](/articles/cdt/339592.md)
@@ -598,6 +600,4 @@
 5-13 [维舟｜我并不惧怕批评](/articles/cdt/340754.md)
 
 5-13 [原点original｜南通小学生大巴车事故现场救援者：“我脱下衣服，给躺在路边的女孩盖上”](/articles/cdt/340756.md)
-
-5-13 [鱼眼观察｜被这则官方通报惊到了](/articles/cdt/340758.md)
 
