--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-17 [SIPRI報告：中國核武庫擴大速度超越他國](/articles/dw/1025197.md)
+
 6-16 [墙外文摘：中国邀请台湾网红去干什么？](/articles/dw/1025198.md)
 
 6-16 [中国为何对瑞士和平峰会不感兴趣？](/articles/dw/1025199.md)
@@ -598,6 +600,4 @@
 5-21 [客座评论：最好的投资者应该在路上](/articles/dw/1025495.md)
 
 5-21 [客座评论：赖清德520演讲为何触痛中国大陆当局？](/articles/dw/1025496.md)
-
-5-21 [德國會議員證實 萧美琴3月造訪德南遭柏林拒绝](/articles/dw/1025497.md)
 
