--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-17 [三名中国顶尖游泳运动员被披露两次药检呈阳性](/articles/nyt/1042673.md)
+
 6-17 [G7公报28处提及中国：措辞强硬、凸显对抗性](/articles/nyt/1042674.md)
 
 6-17 [独立记者黄雪琴、活动人士王建兵因“煽颠罪”获刑](/articles/nyt/1042675.md)
@@ -598,6 +600,4 @@
 3-8 [曾被中国监禁的加拿大商人与加拿大政府达成和解](/articles/nyt/1042971.md)
 
 3-8 [中国是如何在太阳能领域称霸世界的](/articles/nyt/1042972.md)
-
-3-8 [拜登在国情咨文讲话中将如何提及中国？](/articles/nyt/1042973.md)
 
