--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-17 [中国海警称菲律宾补给船在南中国海争议海域与中国船只相撞](/articles/voa/1014803.md)
+
 6-17 [澳中总理举行会谈 强调稳定双边关系并将扩大合作](/articles/voa/1014804.md)
 
 6-17 [当局推出救市举措 中国房市仍跌个不停](/articles/voa/1014805.md)
@@ -598,6 +600,4 @@
 6-5 [拜登启程访问法国和意大利 强调对欧洲的安全承诺](/articles/voa/1015101.md)
 
 6-5 [欧洲议会选举在即，你需要知道的几件事](/articles/voa/1015102.md)
-
-6-5 [数百人于伦敦中国大使馆外悼念六四 英国多处有纪念活动](/articles/voa/1015103.md)
 
