--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-17 [“五眼联盟”警告: 中共空军缺实战经验，网罗西方飞行员窃战术](/articles/voa/1014798.md)
+
+6-17 [聿文视界：高考并未减缓中国社会不平等的加剧](/articles/voa/1014799.md)
+
 6-17 [报告：随着全球紧张局势加剧 核武器国家相关项目支出上升](/articles/voa/1014800.md)
 
 6-17 [普京预计将访越南 美国批评“不该为他提供战争宣传平台”](/articles/voa/1014801.md)
@@ -596,8 +600,4 @@
 6-5 [韩国与非洲多边峰会签署近50项协议 以确保矿产供应并促进贸易](/articles/voa/1015096.md)
 
 6-5 [受惠于股市飙涨 报告显示全球富人空前富有](/articles/voa/1015097.md)
-
-6-5 [实现全球气候目标，专家报告称碳移除量需增加4倍](/articles/voa/1015098.md)
-
-6-5 [“青鸟行动”六四当天在纽约时报广场做广告 全天播放“挺台湾民主”视频](/articles/voa/1015099.md)
 
