--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-17 [世界先进赴新加坡建晶圆厂，全球芯片供应链积极“去中化”](/articles/voa/1014797.md)
+
 6-17 [“五眼联盟”警告: 中共空军缺实战经验，网罗西方飞行员窃战术](/articles/voa/1014798.md)
 
 6-17 [聿文视界：高考并未减缓中国社会不平等的加剧](/articles/voa/1014799.md)
@@ -598,6 +600,4 @@
 6-5 [大选结果不若预期，印度总理莫迪寻求组建联盟政府](/articles/voa/1015095.md)
 
 6-5 [韩国与非洲多边峰会签署近50项协议 以确保矿产供应并促进贸易](/articles/voa/1015096.md)
-
-6-5 [受惠于股市飙涨 报告显示全球富人空前富有](/articles/voa/1015097.md)
 
