--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-17 [韩中周二启动首轮外交及安全对话 美日韩将签三方安全合作协议](/articles/voa/1014795.md)
+
+6-17 [北京对进口欧盟猪肉展开反倾销调查 报复欧盟加征中国电动车关税](/articles/voa/1014796.md)
+
 6-17 [世界先进赴新加坡建晶圆厂，全球芯片供应链积极“去中化”](/articles/voa/1014797.md)
 
 6-17 [“五眼联盟”警告: 中共空军缺实战经验，网罗西方飞行员窃战术](/articles/voa/1014798.md)
@@ -596,8 +600,4 @@
 6-5 [乌克兰以美国和西方武器袭击俄罗斯境内目标，乌战会升级吗？](/articles/voa/1015093.md)
 
 6-5 [香格里拉峰会日防长再提台海 专家:以“战略清晰”防止中国误判](/articles/voa/1015094.md)
-
-6-5 [大选结果不若预期，印度总理莫迪寻求组建联盟政府](/articles/voa/1015095.md)
-
-6-5 [韩国与非洲多边峰会签署近50项协议 以确保矿产供应并促进贸易](/articles/voa/1015096.md)
 
