--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-17 [美日加菲海军在南中国海举行联合演习，履行对地区安全与稳定的承诺](/articles/voa/1014794.md)
+
 6-17 [韩中周二启动首轮外交及安全对话 美日韩将签三方安全合作协议](/articles/voa/1014795.md)
 
 6-17 [北京对进口欧盟猪肉展开反倾销调查 报复欧盟加征中国电动车关税](/articles/voa/1014796.md)
@@ -598,6 +600,4 @@
 6-5 [人权观察致函台湾新总统赖清德，促进一步强化人权保护](/articles/voa/1015092.md)
 
 6-5 [乌克兰以美国和西方武器袭击俄罗斯境内目标，乌战会升级吗？](/articles/voa/1015093.md)
-
-6-5 [香格里拉峰会日防长再提台海 专家:以“战略清晰”防止中国误判](/articles/voa/1015094.md)
 
