--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-17 [筑基政经｜倒查30年后补税是个危险信号](/articles/cdt/339557.md)
+
+6-17 [华尔街俱乐部｜美国风投要求「海外中国创始人」与中国投资机构做切割](/articles/cdt/339559.md)
+
 6-17 [往事与随想｜再谈“偏科”：这个词就不应该存在](/articles/cdt/339560.md)
 
 6-17 [那些原本是废话的常识｜小学生吐槽食堂之后：看，社会又来教“做人”了](/articles/cdt/339562.md)
@@ -596,8 +600,4 @@
 5-13 [每日风声｜今天这则自杀新闻，让人唏嘘](/articles/cdt/340741.md)
 
 5-13 [北青深一度｜庭审被上级法官“遥控”，证据就在审判席上](/articles/cdt/340744.md)
-
-5-13 [风声OPINION｜房地产全面严控后再次全面放开限购，这传递了什么信号？](/articles/cdt/340747.md)
-
-5-13 [浣花溪杜甫｜餐饮店参加广州自来水涨价听证会，店铺收到大量差评](/articles/cdt/340749.md)
 
