--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-18 [每日一语 2024.6.17](/articles/cdt/339552.md)
+
+6-17 [28号楼｜卫健委的倡议，到底伤了谁？](/articles/cdt/339554.md)
+
 6-17 [筑基政经｜倒查30年后补税是个危险信号](/articles/cdt/339557.md)
 
 6-17 [华尔街俱乐部｜美国风投要求「海外中国创始人」与中国投资机构做切割](/articles/cdt/339559.md)
@@ -596,8 +600,4 @@
 5-13 [每日一语 2024.5.13](/articles/cdt/340733.md)
 
 5-13 [历史押韵｜开眼了，个旧运政“碰瓷式执法”真是细思极恐，颠覆三观](/articles/cdt/340738.md)
-
-5-13 [每日风声｜今天这则自杀新闻，让人唏嘘](/articles/cdt/340741.md)
-
-5-13 [北青深一度｜庭审被上级法官“遥控”，证据就在审判席上](/articles/cdt/340744.md)
 
