--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-18 [内塔尼亚胡解散战时内阁，对加沙攻击的“战术性暂停”仍在延续](/articles/voa/1014789.md)
+
+6-18 [普京24年来首次访朝，国际社会担忧俄朝深化军事关系](/articles/voa/1014790.md)
+
 6-17 [胡歌访台飘政治味？ 中国演员肩负“文化统战”任务惹议](/articles/voa/1014791.md)
 
 6-17 [华北雁塘: 缺席的代价：瑞士和平峰会后的中国问题](/articles/voa/1014792.md)
@@ -596,8 +600,4 @@
 6-6 [以军对加沙中部展开空袭 宣布开始“针对性行动”](/articles/voa/1015087.md)
 
 6-5 [美国驻黎巴嫩大使馆发生枪击，黎安全部门已加强对使馆的保护](/articles/voa/1015088.md)
-
-6-5 [乌克兰回应王毅“六点共识”，暗批中国在乌克兰问题上立场失衡](/articles/voa/1015089.md)
-
-6-5 [中国网红靖国神社涂鸦便溺，中共又喜又怕？](/articles/voa/1015090.md)
 
