--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-18 [普京解除俄国防部四名副部长职务，取代者包括其“近亲”](/articles/voa/1014777.md)
+
+6-18 [北约秘书长寻求让中国为支持俄罗斯而面临后果，并称让武器稳定流入乌克兰是止战唯一途径](/articles/voa/1014778.md)
+
 6-18 [反修例运动5周年 社运案受审学生指监狱不会是终结 出狱女子续支援同路人](/articles/voa/1014779.md)
 
 6-18 [针对媒体的威胁日趋严重，美国多州举办新闻安全研讨会](/articles/voa/1014780.md)
@@ -596,8 +600,4 @@
 6-6 [美国及其盟国警告：中国正积极“猎头”寻觅西方战斗机飞行员](/articles/voa/1015075.md)
 
 6-6 [拜登签署非法移民限令 中国网民称拜登成了特朗普](/articles/voa/1015076.md)
-
-6-6 [世卫组织：墨西哥发生全球首起人类感染H5N2禽流感死亡确诊病例](/articles/voa/1015077.md)
-
-6-6 [以色列正努力应对停火计划，拜登派遣高级助手向哈马斯施压](/articles/voa/1015078.md)
 
