--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-18 [普京将访问朝鲜，为俄乌战争寻求武器支持](/articles/nyt/1042668.md)
+
 6-18 [中菲船只在南海相撞，两国相互指责](/articles/nyt/1042669.md)
 
 6-18 [“不恐慌、不麻木”：美国在台协会处长给台湾的临别赠言](/articles/nyt/1042670.md)
@@ -598,6 +600,4 @@
 3-11 [日本著名漫画家、《龙珠》作者鸟山明去世](/articles/nyt/1042966.md)
 
 3-11 [“只生一个好”到“三胎更比二胎强”：口号里的中国生育政策](/articles/nyt/1042967.md)
-
-3-11 [中国经济低迷，习近平为何仍自信“东升西降”](/articles/nyt/1042968.md)
 
