--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-18 [李強訪澳行落幕 澳洲關切成蕾被擋](/articles/dw/1025184.md)
+
 6-18 [普丁時隔24年再訪北韓 北約關切「獨裁聯盟」](/articles/dw/1025185.md)
 
 6-17 [威胁巴勒斯坦支持者 德教育部国务秘书遭解职](/articles/dw/1025186.md)
@@ -598,6 +600,4 @@
 5-22 [入籍德国的叙利亚难民](/articles/dw/1025482.md)
 
 5-22 [消息人士：一旦中国侵台 ASML可远程瘫痪台积电EUV](/articles/dw/1025483.md)
-
-5-22 [越南公安部部长苏林就任国家主席](/articles/dw/1025484.md)
 
