--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-18 [网传中国核潜艇现踪台海，台湾国防部称“有掌握”](/articles/voa/1014766.md)
+
+6-18 [泰国前总理他信涉嫌冒犯君主遭正式起诉但获准保释](/articles/voa/1014767.md)
+
 6-18 [韩朝非军事区地雷爆炸，朝鲜士兵两周内二度越过分界线](/articles/voa/1014768.md)
 
 6-18 [澳大利亚对中国投资关键矿产心存疑虑之际 李强访问矿产丰富的西澳](/articles/voa/1014769.md)
@@ -596,8 +600,4 @@
 6-6 [台湾游客赴中“禁团令”生效 学者:中国拒接赖清德递出的橄榄枝](/articles/voa/1015064.md)
 
 6-6 [中国互联网信息“断崖式”消失，当局红线越设越多](/articles/voa/1015065.md)
-
-6-6 [乌克兰战争延烧逾2年，西方领导人纪念诺曼底登陆](/articles/voa/1015066.md)
-
-6-6 [停火压力加大之际 以色列称精准打击了藏在一所学校内的哈马斯据点](/articles/voa/1015067.md)
 
