--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-18 [【404文库】星辰大海的边界｜补税风波](/articles/cdt/339549.md)
+
 6-18 [每日一语 2024.6.17](/articles/cdt/339552.md)
 
 6-17 [28号楼｜卫健委的倡议，到底伤了谁？](/articles/cdt/339554.md)
@@ -598,6 +600,4 @@
 5-14 [亮见｜《我是歌手》，咋变成对抗列强了？](/articles/cdt/340728.md)
 
 5-13 [每日一语 2024.5.13](/articles/cdt/340733.md)
-
-5-13 [历史押韵｜开眼了，个旧运政“碰瓷式执法”真是细思极恐，颠覆三观](/articles/cdt/340738.md)
 
