--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-18 [木蹊说｜打趴外国企业，打工人就幸福了吗？](/articles/cdt/339512.md)
+
+6-18 [【CDT图集】全球9城中国女权行动者举起巨型横幅 ：释放黄雪琴王建兵](/articles/cdt/339546.md)
+
 6-18 [【404文库】星辰大海的边界｜补税风波](/articles/cdt/339549.md)
 
 6-18 [每日一语 2024.6.17](/articles/cdt/339552.md)
@@ -596,8 +600,4 @@
 5-14 [六神磊磊读金庸｜5·12那天，这人怪我“从来不赞美”](/articles/cdt/340723.md)
 
 5-14 [建设性意见｜现在是唱歌也必须中国天下第一对吗？](/articles/cdt/340725.md)
-
-5-14 [亮见｜《我是歌手》，咋变成对抗列强了？](/articles/cdt/340728.md)
-
-5-13 [每日一语 2024.5.13](/articles/cdt/340733.md)
 
