--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+6-18 [欧中贸易摩擦继续 中国为何选择猪肉产品来报复？](/articles/dw/1025178.md)
+
+6-18 [如何对抗热浪？ 高科技帮助你](/articles/dw/1025179.md)
+
+6-18 [中国高管被曝巨额受贿 阿迪达斯股价震荡](/articles/dw/1025180.md)
+
 6-18 [马蒂亚斯的轮椅学校](/articles/dw/1025181.md)
 
 6-18 [歐盟官員罕見訪西藏 憂中國人權狀況「嚴峻」](/articles/dw/1025182.md)
@@ -594,10 +600,4 @@
 5-23 [回应对台军售和涉俄制裁 中国宣布对美军工企业实施反制措施](/articles/dw/1025476.md)
 
 5-23 [选项党禁止首席候选人克拉参加竞选活动](/articles/dw/1025477.md)
-
-5-23 [萨尔兰遭遇世纪洪灾](/articles/dw/1025478.md)
-
-5-23 [中國宣布環台軍演 專家：升高壓力但風險可控](/articles/dw/1025479.md)
-
-5-22 [郭文贵被控诈骗10亿美元案即将开庭](/articles/dw/1025480.md)
 
