--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-19 [普京访问朝鲜，两国即将签署的新条约受关注](/articles/voa/1014757.md)
+
+6-19 [普京访问朝鲜之际，俄军开始在西太敏感水域搞大型演习](/articles/voa/1014758.md)
+
+6-19 [中国高调纪念黄埔军校百年 分析：剿共史实尴尬 统战效果渐衰](/articles/voa/1014759.md)
+
 6-19 [美中在南中国海军力较量：盟友VS万吨大驱](/articles/voa/1014760.md)
 
 6-18 [中国解放军094核潜艇现踪台海 分析:闪避美日侦搜](/articles/voa/1014761.md)
@@ -594,10 +600,4 @@
 6-7 [在对中国的担忧日益加剧之际，日美韩海警在日本沿海举行首次联合演练](/articles/voa/1015055.md)
 
 6-7 [波音星际航线停靠国际空间站 中途因技术故障而延迟](/articles/voa/1015056.md)
-
-6-7 [法官：被判藐视国会的班农必须在7月1日前向监狱报到服刑](/articles/voa/1015057.md)
-
-6-7 [美国总统拜登在诺曼底登陆纪念活动上讲话 呼吁加强与乌克兰的团结](/articles/voa/1015058.md)
-
-6-7 [泽连斯基参加诺曼底登陆80周年庆典之际，乌军在前线重创俄军](/articles/voa/1015059.md)
 
