--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-19 [热爱“组团”理财的韩国人：一起存钱一起花](/articles/nyt/1042663.md)
+
 6-19 [佩洛西随美国会代表团会见达赖喇嘛，北京予以谴责](/articles/nyt/1042664.md)
 
 6-19 [关于俄罗斯与朝鲜深化关系，你应该知道的](/articles/nyt/1042665.md)
@@ -598,6 +600,4 @@
 3-12 [四年后，我们有多了解新冠？](/articles/nyt/1042961.md)
 
 3-12 [美监管部门发现波音737 Max生产过程存在大量问题](/articles/nyt/1042962.md)
-
-3-12 [真假家庭照：凯特王妃“精修图”引发的网络谣言和阴谋论](/articles/nyt/1042963.md)
 
