--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-19 [英伟达超越微软，成为全球市值最高公司](/articles/nyt/1042662.md)
+
 6-19 [热爱“组团”理财的韩国人：一起存钱一起花](/articles/nyt/1042663.md)
 
 6-19 [佩洛西随美国会代表团会见达赖喇嘛，北京予以谴责](/articles/nyt/1042664.md)
@@ -598,6 +600,4 @@
 3-13 [中国出口激增，引发欧美国家警惕与担忧](/articles/nyt/1042960.md)
 
 3-12 [四年后，我们有多了解新冠？](/articles/nyt/1042961.md)
-
-3-12 [美监管部门发现波音737 Max生产过程存在大量问题](/articles/nyt/1042962.md)
 
