--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-19 [美国跨党派国会代表团在印度与达赖喇嘛会晤](/articles/voa/1014736.md)
+
+6-19 [南中国海周一撞船事件 菲军方指控中国海警登船并夺取武器](/articles/voa/1014737.md)
+
 6-19 [中韩举行新机制下的首次外交安全对话](/articles/voa/1014738.md)
 
 6-19 [中国将推出“科创板八条”改革 誓言吸引资金入市](/articles/voa/1014739.md)
@@ -596,8 +600,4 @@
 6-7 [澳大利亚前总理陆克文：台海战争将像二战一样改变世界](/articles/voa/1015034.md)
 
 6-7 [两英国法官辞任香港终审法院，一人指政治原因](/articles/voa/1015035.md)
-
-6-7 [四艘中国武装海警船进入日本海域，东京向北京提出抗议](/articles/voa/1015036.md)
-
-6-7 [拜登在巴黎会晤泽连斯基，如何扭转乌克兰战场不利局面成重要议题](/articles/voa/1015037.md)
 
