--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+6-19 [普京会金正恩 朝俄签订防卫互助协定](/articles/dw/1025166.md)
+
+6-19 [佩洛西等美议员在达兰萨拉与达赖喇嘛会晤](/articles/dw/1025167.md)
+
+6-19 [專訪羅冠聰：流亡英國三十而立](/articles/dw/1025168.md)
+
 6-19 [中国媒体：中国车企呼吁提高大排量汽车进口关税](/articles/dw/1025169.md)
 
 6-19 [全球媒体论坛：中东冲突和“正确措辞”](/articles/dw/1025170.md)
@@ -594,10 +600,4 @@
 5-24 [若国际法庭下达逮捕令 德国将逮捕内塔尼亚胡？](/articles/dw/1025464.md)
 
 5-24 [微软发布搭载AI功能的个人电脑](/articles/dw/1025465.md)
-
-5-24 [台湾能否抵御中国军事入侵？](/articles/dw/1025466.md)
-
-5-24 [澳大利亚地方法院裁定前美国飞行员符合引渡条件](/articles/dw/1025467.md)
-
-5-24 [欧盟通过人工智能法](/articles/dw/1025468.md)
 
